--- a/docs/api-reference/CRMScript.Global.Date.yml
+++ b/docs/api-reference/CRMScript.Global.Date.yml
@@ -153,7 +153,7 @@ items:
     parameters:
     - id: num
       type: CRMScript.Global.Integer
-      description: Number of months to add."
+      description: "Number of months to add."
     return:
       type: CRMScript.Global.Date
 - uid: CRMScript.Global.Date.addYear(Integer)
