--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -10,7 +10,7 @@ items:
     - CRMScript.Global.String.#ctor(String)
     - CRMScript.Global.String.#ctor(Byte[])
     - CRMScript.Global.String.#ctor(Byte[], String)
-# todo: return to add more constuctors from string-type.md after introducing NSStream
+# todo: return to add more constructors from string-type.md after introducing NSStream
     - CRMScript.Global.String.getLength()
     - CRMScript.Global.String.toLower()
     - CRMScript.Global.String.toUpper()
@@ -169,7 +169,7 @@ items:
       description: "The bytes to copy into the new object."
     - id: codePage
       type: CRMScript.Global.String
-      description: Code page identifier."
+      description: "Code page identifier."
     return:
       type: CRMScript.Global.String
       description: "A new String object."
@@ -793,7 +793,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the string only contains numeric characters [0-9]."
+      description: "True if the string only contains numeric characters [0-9]."
 - uid: CRMScript.Global.String.isAlphanumeric()
   commentId: M:CRMScript.Global.String.isAlphanumeric()
   id: isAlphanumeric()
