--- a/docs/api-reference/CRMScript.Native.Attachment.yml
+++ b/docs/api-reference/CRMScript.Native.Attachment.yml
@@ -38,7 +38,7 @@ items:
   summary: "\nInitializes a new instance of the Attachment class.\n"
   remarks: 
   syntax: 
-    content: Attachment."
+    content: Attachment
   example: 
   - "\n<pre><code>Attachment a;\n\na.load(2); // Loads attachment with id = 2\na.setValue(&quot;name&quot;, &quot;test.txt&quot;);\nprint(a.getValue(&quot;size&quot;)); // Size in bytes</code></pre>\n"
 - uid: CRMScript.Native.Attachment.dump()
@@ -58,7 +58,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if everything is OK; otherwise false."
+      description: "True if everything is OK; otherwise false."
   example: 
 - uid: CRMScript.Native.Attachment.dump(Bool)
   commentId: M:CRMScript.Native.Attachment.dump(Bool)
@@ -77,10 +77,10 @@ items:
     parameters:
     - id: download
       type: CRMScript.Global.Bool
-      description: true if you want to download the file instead of display it."
+      description: "True if you want to download the file instead of display it."
     return:
       type: CRMScript.Global.Bool
-      description: true if everything is OK; otherwise false."
+      description: "True if everything is OK; otherwise false."
   example: 
 - uid: CRMScript.Native.Attachment.getBase64()
   commentId: M:CRMScript.Native.Attachment.getBase64()
@@ -121,7 +121,7 @@ items:
       description: "The URL to be used by a customer or an user."
     - id: saveToDisk
       type: CRMScript.Global.Bool
-      description: Is this a link used to hint to the web browser with http headers that the file is not to be opened, but saved to disk?
+      description: "Is this a link used to hint to the web browser with http headers that the file is not to be opened, but saved to disk?"
     return:
       type: CRMScript.Global.String
       description: "The download URL for the attachment."
@@ -187,7 +187,7 @@ items:
       description: "Attachment ID."
     return:
       type: CRMScript.Global.Bool
-      description: true if the load was successful; otherwise false."
+      description: "True if the load was successful; otherwise false."
   example: 
 - uid: CRMScript.Native.Attachment.remove()
   commentId: M:CRMScript.Native.Attachment.remove()
@@ -205,7 +205,7 @@ items:
     content: remove()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Attachment.save()
   commentId: M:CRMScript.Native.Attachment.save()
@@ -270,7 +270,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to assign to name."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.Attachment
