--- a/docs/api-reference/CRMScript.Native.Cache.yml
+++ b/docs/api-reference/CRMScript.Native.Cache.yml
@@ -33,7 +33,7 @@ items:
   summary: "\nInitializes a new instance of the Cache class.\n"
   remarks: 
   syntax: 
-    content: Cache."
+    content: Cache
   example: 
 - uid: CRMScript.Native.Cache.eof()
   commentId: M:CRMScript.Native.Cache.eof()
@@ -52,7 +52,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if it is at end of file or there are no more fields to iterate through; otherwise, false."
+      description: "True if it is at end of file or there are no more fields to iterate through; otherwise, false."
   example: 
 - uid: CRMScript.Native.Cache.first()
   commentId: M:CRMScript.Native.Cache.first()
@@ -71,7 +71,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: false if the field set is empty; otherwise, true."
+      description: "False if the field set is empty; otherwise, true."
   example: 
 - uid: CRMScript.Native.Cache.getData(String)
   commentId: M:CRMScript.Native.Cache.getData(String)
@@ -93,7 +93,7 @@ items:
       description: "The table to return data from."
     return:
       type: CRMScript.Global.String
-      description: Data from the cached table specified in tableId."
+      description: "Data from the cached table specified in tableId."
   example: 
 - uid: CRMScript.Native.Cache.getDataSubset(String,String,String)
   commentId: M:CRMScript.Native.Cache.getDataSubset(String,String,String)
@@ -159,7 +159,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: false if at end of file or the field set is empty; otherwise, true."
+      description: "False if at end of file or the field set is empty; otherwise, true."
   example: 
 - uid: CRMScript.Native.Cache.sort(String,Bool)
   commentId: M:CRMScript.Native.Cache.sort(String,Bool)
@@ -181,7 +181,7 @@ items:
       description: "The field to sort by"
     - id: order
       type: CRMScript.Global.Bool
-      description: false will sort in an ascending order, true in a descending order."
+      description: "False will sort in an ascending order, true in a descending order."
   example: 
 references:
 - uid: CRMScript.Native.Cache
