--- a/docs/api-reference/CRMScript.Native.Category.yml
+++ b/docs/api-reference/CRMScript.Native.Category.yml
@@ -31,7 +31,7 @@ items:
   summary: "\nInitializes a new instance of the Category class.\n"
   remarks: 
   syntax: 
-    content: Category."
+    content: Category
   example: 
 - uid: CRMScript.Native.Category.getValue(String)
   commentId: M:CRMScript.Native.Category.getValue(String)
@@ -120,7 +120,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>Category c;\n\nc.load(2);\nc.setValue(&quot;name&quot;, &quot;Test&quot;);</code></pre>\n"
 references:
