--- a/docs/api-reference/CRMScript.Native.DBWrite.yml
+++ b/docs/api-reference/CRMScript.Native.DBWrite.yml
@@ -37,7 +37,7 @@ items:
   summary: "\nInitializes a new instance of the DBWrite class.\n"
   remarks: "\nObsolete! Use SearchEngine or ExtraTable.\n"
   syntax: 
-    content: DBWrite."
+    content: DBWrite
   example:
 - uid: CRMScript.Native.DBWrite.addClob(String,String)
   commentId: M:CRMScript.Native.DBWrite.addClob(String,String)
@@ -61,7 +61,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to write."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addDate(String,Date)
   commentId: M:CRMScript.Native.DBWrite.addDate(String,Date)
@@ -85,7 +85,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to write."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addDateTime(String,DateTime)
   commentId: M:CRMScript.Native.DBWrite.addDateTime(String,DateTime)
@@ -133,7 +133,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to write."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addString(String,String)
   commentId: M:CRMScript.Native.DBWrite.addString(String,String)
@@ -157,7 +157,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to write."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addTable(String)
   commentId: M:CRMScript.Native.DBWrite.addTable(String)
@@ -178,7 +178,7 @@ items:
       type: CRMScript.Global.String
       description: "The name of the table, for example, ticket."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addTime(String,Time)
   commentId: M:CRMScript.Native.DBWrite.addTime(String,Time)
@@ -202,7 +202,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to write."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.addWhereId(Integer)
   commentId: M:CRMScript.Native.DBWrite.addWhereId(Integer)
@@ -223,7 +223,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of the row to write to."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.delete()
   commentId: M:CRMScript.Native.DBWrite.delete()
@@ -241,7 +241,7 @@ items:
     content: Void delete()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DBWrite.insert()
   commentId: M:CRMScript.Native.DBWrite.insert()
@@ -278,7 +278,7 @@ items:
     content: Void update()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.DBWrite
