--- a/docs/api-reference/CRMScript.Native.DbiControl.yml
+++ b/docs/api-reference/CRMScript.Native.DbiControl.yml
@@ -32,7 +32,7 @@ items:
   summary: "\nInitializes a new instance of the DbiControl class.\n"
   remarks: 
   syntax: 
-    content: DbiControl."
+    content: DbiControl
   example: 
 - uid: CRMScript.Native.DbiControl.getObject()
   commentId: M:CRMScript.Native.DbiControl.getObject()
@@ -51,7 +51,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Native.Map
-      description: Field-value pairs for the currently fetched object."
+      description: "Field-value pairs for the currently fetched object."
   example: 
 - uid: CRMScript.Native.DbiControl.getParameter(String)
   commentId: M:CRMScript.Native.DbiControl.getParameter(String)
@@ -70,7 +70,7 @@ items:
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: Name of the parameter to get the value of."
+      description: "Name of the parameter to get the value of."
     return:
       type: CRMScript.Global.String
       description: "The value of the named parameter."
@@ -92,7 +92,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Native.Map
-      description: Field-value pairs."
+      description: "Field-value pairs."
   example: 
 - uid: CRMScript.Native.DbiControl.saveParameter(String,String)
   commentId: M:CRMScript.Native.DbiControl.saveParameter(String,String)
@@ -111,12 +111,12 @@ items:
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: Name of parameter to save for later retrieval by other DBI integration runs."
+      description: "Name of parameter to save for later retrieval by other DBI integration runs."
     - id: val
       type: CRMScript.Global.String
       description: "The value to be saved for the given parameter."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DbiControl.sendObject(Map)
   commentId: M:CRMScript.Native.DbiControl.sendObject(Map)
@@ -135,9 +135,9 @@ items:
     parameters:
     - id: values
       type: CRMScript.Native.Map
-      description: Field-value pairs that define the object in a way that is meaningful to the external agent."
+      description: "Field-value pairs that define the object in a way that is meaningful to the external agent."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.DbiControl.setParameter(String,String)
   commentId: M:CRMScript.Native.DbiControl.setParameter(String,String)
@@ -161,7 +161,7 @@ items:
       type: CRMScript.Global.String
       description: "A string representation of the value (for example, 100)."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.DbiControl
