--- a/docs/api-reference/CRMScript.Native.EabEntry.yml
+++ b/docs/api-reference/CRMScript.Native.EabEntry.yml
@@ -33,7 +33,7 @@ items:
   summary: "Initializes a new instance of the EabEntry class.\n"
   remarks: 
   syntax: 
-    content: EabEntry."
+    content: EabEntry
   example: 
 - uid: CRMScript.Native.EabEntry.delete()
   commentId: M:CRMScript.Native.EabEntry.delete()
@@ -51,7 +51,7 @@ items:
     content: Void delete()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.EabEntry.getValue(String)
   commentId: M:CRMScript.Native.EabEntry.getValue(String)
@@ -93,10 +93,10 @@ items:
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: ID of the entry to load."
+      description: "ID of the entry to load."
     return:
       type: CRMScript.Global.Bool
-      description: true if loading var successful; otherwise, false."
+      description: "True if loading var successful; otherwise, false."
   example: 
   - "\n<pre><code>EabEntry eab;\n\nBool b = eab.load(15);\nprint(b.toString());</code></pre>\n"
 - uid: CRMScript.Native.EabEntry.loadFromAgentAndKey(Integer,String)
@@ -116,13 +116,13 @@ items:
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: ID of the agent this EAB entry belongs to"
+      description: "ID of the agent this EAB entry belongs to"
     - id: key
       type: CRMScript.Global.String
       description: "The external key for the EAB entry."
     return:
       type: CRMScript.Global.Bool
-      description: true if loading var successful; otherwise, false."
+      description: "True if loading var successful; otherwise, false."
   example: 
 - uid: CRMScript.Native.EabEntry.save()
   commentId: M:CRMScript.Native.EabEntry.save()
@@ -141,7 +141,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: ID of the saved entry."
+      description: "ID of the saved entry."
   example: 
 - uid: CRMScript.Native.EabEntry.setValue(String,String)
   commentId: M:CRMScript.Native.EabEntry.setValue(String,String)
@@ -165,7 +165,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>EabEntry eab;\n\nBool b = eab.load(15);\nprint(b.toString());\n\neab.setValue(&quot;name&quot;, &quot;test&quot;);\nprint(eab.getValue(&quot;name&quot;));</code></pre>\n"
 references:
