--- a/docs/api-reference/CRMScript.Native.ExtraFieldsInfo.yml
+++ b/docs/api-reference/CRMScript.Native.ExtraFieldsInfo.yml
@@ -40,7 +40,7 @@ items:
   summary: "\nInitializes a new instance of the ExtraFieldsInfo class.\n"
   remarks: 
   syntax: 
-    content: ExtraFieldsInfo."
+    content: ExtraFieldsInfo
   example: 
   - "\n<pre><code>ExtraFieldsInfo e;\n\ne.getExtraFields(&quot;person&quot;); // Finds extraFields in table person</code></pre>\n"
 - uid: CRMScript.Native.ExtraFieldsInfo.eof()
@@ -85,7 +85,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\nIf you want all extra fields pointing to the extra table with ID 5, you'd call getChildrenFields(20, 5)<p></p>\nIf you want all extra fields of type Dat you'd call getChildrenFields(3, 0)\n"
 - uid: CRMScript.Native.ExtraFieldsInfo.getCompanyChildrenFields()
@@ -104,7 +104,7 @@ items:
     content: getCompanyChildrenFields()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.ExtraFieldsInfo.getCustomerChildrenFields()
   commentId: M:CRMScript.Native.ExtraFieldsInfo.getCustomerChildrenFields()
@@ -122,7 +122,7 @@ items:
     content: Void getCustomerChildrenFields()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.ExtraFieldsInfo.getDisplayField()
   commentId: M:CRMScript.Native.ExtraFieldsInfo.getDisplayField()
@@ -163,7 +163,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return: 
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>ExtraFieldsInfo e;\n\ne.getExtraFields(&quot;person&quot;);</code></pre>\n"
 - uid: CRMScript.Native.ExtraFieldsInfo.getFieldName()
@@ -284,7 +284,7 @@ items:
     content: Void getTicketChildrenFields()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.ExtraFieldsInfo.next()
   commentId: M:CRMScript.Native.ExtraFieldsInfo.next()
@@ -302,7 +302,7 @@ items:
     content: Void next()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>ExtraFieldsInfo efi;\n\nfor (efi.getTicketChildrenFields(); !efi.eof(); efi.next())\n{\n  // do something with information from efi\n}</code></pre>\n"
 references:
