--- a/docs/api-reference/CRMScript.Native.ExtraTableInfo.yml
+++ b/docs/api-reference/CRMScript.Native.ExtraTableInfo.yml
@@ -31,7 +31,7 @@ items:
   summary: "\nInitializes a new instance of the ExtraTableInfo class.\n"
   remarks: 
   syntax: 
-    content: ExtraTableInfo."
+    content: ExtraTableInfo
   example: 
   - "\n<pre><code>ExtraTableInfo e;\n\ne.load(&quot;y_mytable&quot;);</code></pre>\n"
 - uid: CRMScript.Native.ExtraTableInfo.getFlags()
@@ -108,9 +108,9 @@ items:
     parameters:
     - id: tableName
       type: CRMScript.Global.String
-      description: Name of the table (for example y_mytable)."
+      description: "Name of the table (for example y_mytable)."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.ExtraTableInfo
