--- a/docs/api-reference/CRMScript.Native.File.yml
+++ b/docs/api-reference/CRMScript.Native.File.yml
@@ -40,7 +40,7 @@ items:
   summary: "\nInitializes a new instance of the File class.\n"
   remarks: "\nUse open() before you call any other methods.\n"
   syntax: 
-    content: File."
+    content: File
   example: 
   - "\n<pre><code>File f;\n\nf.open(&quot;test.txt&quot;, &quot;a+&quot;); // Opening file appending (and creating)\nf.write(&quot;test&quot;);\nf.close(); // Closing the file when done writing\n\nFile g;\n\ng.open(&quot;test.txt&quot;, &quot;r&quot;); // Opening file for reading only\nprint(g.readAll());</code></pre>\n"
 - uid: CRMScript.Native.File.close()
@@ -59,7 +59,7 @@ items:
     content: Void close()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.File.eof()
   commentId: M:CRMScript.Native.File.eof()
@@ -78,7 +78,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if a read passed the end of file has been attempted; otherwise, false."
+      description: "True if a read passed the end of file has been attempted; otherwise, false."
   example: 
 - uid: CRMScript.Native.File.flush()
   commentId: M:CRMScript.Native.File.flush()
@@ -96,7 +96,7 @@ items:
     content: flush()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.File.open(String,String)
   commentId: M:CRMScript.Native.File.open(String,String)
@@ -115,10 +115,10 @@ items:
     parameters:
     - id: filename
       type: CRMScript.Global.String
-      description: Path to the file"
+      description: "Path to the file"
     - id: mode
       type: CRMScript.Global.String
-      description: How to open the file."
+      description: "How to open the file."
     return:
       type: CRMScript.Global.Bool
       description:
@@ -140,13 +140,13 @@ items:
     parameters:
     - id: filename
       type: CRMScript.Global.String
-      description: Path to the file"
+      description: "Path to the file"
     - id: mode
       type: CRMScript.Global.String
-      description: How to open the file"
+      description: "How to open the file"
     - id: codepage
       type: CRMScript.Global.String
-      description: What text codepage the file is in. Default is ISO-8859-1 (Latin-1), but UTF-8 is common for Unicode text files."
+      description: "What text codepage the file is in. Default is ISO-8859-1 (Latin-1), but UTF-8 is common for Unicode text files."
     return:
       type: CRMScript.Global.Bool
       description:
@@ -187,7 +187,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Byte[]
-      description: Binary data."
+      description: "Binary data."
   example: 
 - uid: CRMScript.Native.File.readLine()
   commentId: M:CRMScript.Native.File.readLine()
@@ -224,7 +224,7 @@ items:
     content: Void rewind()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.File.unlink()
   commentId: M:CRMScript.Native.File.unlink()
@@ -262,9 +262,9 @@ items:
     parameters:
     - id: data
       type: CRMScript.Global.String
-      description: String to write to the file."
+      description: "String to write to the file."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.File.writeBinary(Byte[])
   commentId: M:CRMScript.Native.File.writeBinary(Byte[])
@@ -283,9 +283,9 @@ items:
     parameters:
     - id: data
       type: CRMScript.Global.Byte[]
-      description: Data in a Byte array that you want to write to the file."
+      description: "Data in a Byte array that you want to write to the file."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.File
