--- a/docs/api-reference/CRMScript.Native.Generic.yml
+++ b/docs/api-reference/CRMScript.Native.Generic.yml
@@ -72,10 +72,10 @@ items:
     parameters:
     - id: struct
       type: CRMScript.Native.Generic
-      description: Generic Struct to get variable in."
+      description: "Generic Struct to get variable in."
     - id: name
       type: CRMScript.Global.String
-      description: Name of variable to get."
+      description: "Name of variable to get."
     return:
       type: CRMScript.Native.Generic
       description: "The variable as a Generic, independent of its type."
@@ -394,7 +394,7 @@ items:
       description: "The variable."
     return:
       type: CRMScript.Global.Integer
-      description: Number of dimensions."
+      description: "Number of dimensions."
 - uid: CRMScript.Native.Generic.typeIsStruct(Generic)
   commentId: M:CRMScript.Native.Generic.typeIsStruct(Generic)
   id: typeIsStruct(Generic)
@@ -417,7 +417,7 @@ items:
       description: "The variable to check."
     return:
       type: CRMScript.Global.Bool
-      description: True if the variable is a struct."
+      description: "True if the variable is a struct."
 - uid: CRMScript.Native.Generic.getStructMembers(String)
   commentId: M:CRMScript.Native.Generic.getStructMembers(String)
   id: getStructMembers(String)
@@ -436,10 +436,10 @@ items:
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: Name of struct to find."
+      description: "Name of struct to find."
     return:
       type: CRMScript.Global.String[]
-      description: String array of member names.
+      description: "String array of member names."
 references:
 - uid: CRMScript.Native.Generic
   commentId: T:CRMScript.Native.Generic
