--- a/docs/api-reference/CRMScript.Native.GenericSearch.yml
+++ b/docs/api-reference/CRMScript.Native.GenericSearch.yml
@@ -41,7 +41,7 @@ items:
   summary: "\nInitializes a new instance of the File class.\n"
   remarks: "\nObsolete! Use SearchEngine instead.\n"
   syntax: 
-    content: GenericSearch."
+    content: GenericSearch
   example: 
 - uid: CRMScript.Native.GenericSearch.addComparison(String,String,String,String,Integer)
   commentId: M:CRMScript.Native.GenericSearch.addComparison(String,String,String,String,Integer)
@@ -63,18 +63,18 @@ items:
       description: "The field to compare with field2"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator. (OperatorEquals, OperatorNotEquals, OperatorLt, OperatorLte, OperatorGt, OperatorGte, OperatorLike, OperatorNotLike, OperatorContains, OperatorBeginsWith, OperatorEndsWith, OperatorIn, OperatorNotIn, OperatorIs, OperatorOracleLeftJoin, OperatorIsNot)"
+      description: "Comparison operator. (OperatorEquals, OperatorNotEquals, OperatorLt, OperatorLte, OperatorGt, OperatorGte, OperatorLike, OperatorNotLike, OperatorContains, OperatorBeginsWith, OperatorEndsWith, OperatorIn, OperatorNotIn, OperatorIs, OperatorOracleLeftJoin, OperatorIsNot)"
     - id: field2
       type: CRMScript.Global.String
       description: "The field to compare with field1"
     - id: rowOperator
       type: CRMScript.Global.String
-      description: Operator for composing this criteria with a following criterion. (OperatorAnd, OperatorOr, OperatorNotAnd, OperatorNotOr)"
+      description: "Operator for composing this criteria with a following criterion. (OperatorAnd, OperatorOr, OperatorNotAnd, OperatorNotOr)"
     - id: concatLevel
       type: CRMScript.Global.Integer
       description: "A number. All criteria with the same number will be placed inside the same brackets."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.GenericSearch.addCriteria(String,String,String,String,Integer)
   commentId: M:CRMScript.Native.GenericSearch.addCriteria(String,String,String,String,Integer)
@@ -107,7 +107,7 @@ items:
       type: CRMScript.Global.Integer
       description: "A number to use for combining criteria inside brackets. If the criteria has the same concatLevel, the end up inside the same brackets."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.GenericSearch.addField(String)
   commentId: M:CRMScript.Native.GenericSearch.addField(String)
@@ -176,7 +176,7 @@ items:
       type: CRMScript.Global.Bool
       description: "The direction of the sort. true = ascending; false = descending."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.GenericSearch.countRows()
   commentId: M:CRMScript.Native.GenericSearch.countRows()
@@ -214,7 +214,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the result pointer has reached the end of result set; otherwise, false."
+      description: "True if the result pointer has reached the end of result set; otherwise, false."
   example: 
 - uid: CRMScript.Native.GenericSearch.execute()
   commentId: M:CRMScript.Native.GenericSearch.execute()
@@ -232,7 +232,7 @@ items:
     content: Void execute()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.GenericSearch.first()
   commentId: M:CRMScript.Native.GenericSearch.first()
@@ -251,7 +251,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: false if the result set is empty; otherwise, true."
+      description: "False if the result set is empty; otherwise, true."
   example: 
 - uid: CRMScript.Native.GenericSearch.get(String,Integer)
   commentId: M:CRMScript.Native.GenericSearch.get(String,Integer)
@@ -320,7 +320,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if there is a next row; otherwise, false (the pointer has reached the last result set) 
+      description: "True if there is a next row; otherwise, false (the pointer has reached the last result set)"
   example: 
 - uid: CRMScript.Native.GenericSearch.setLanguage(Integer)
   commentId: M:CRMScript.Native.GenericSearch.setLanguage(Integer)
@@ -339,7 +339,7 @@ items:
     parameters:
     - id: languageId
       type: CRMScript.Global.Integer
-      description: What language to use."
+      description: "What language to use."
     return:
       type: CRMScript.Global.Void 
   example: 
@@ -362,7 +362,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The maximum number of rows to be returned in the result set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.GenericSearch
