--- a/docs/api-reference/CRMScript.Native.HTTP.yml
+++ b/docs/api-reference/CRMScript.Native.HTTP.yml
@@ -51,7 +51,7 @@ items:
   summary: "\nInitializes a new instance of the HTTP class.\n"
   remarks: 
   syntax: 
-    content: HTTp."
+    content: HTTP
   example: 
   - "\n<pre><code>HTTP h;\n\nByte[] b = h.open(&quot;https://httpbin.org/&quot;);\nprintLine(h.getValue(&quot;statusCode&quot;));\n\nif (h.hasError())\n  print(h.getErrorMessage());\nelse</code></pre>\n"
 - uid: CRMScript.Native.HTTP.addAttachmentData(Integer)
@@ -74,7 +74,7 @@ items:
       description: "The ID of the Service attachment you want to upload."
     return:
       type: CRMScript.Global.Bool
-      description: true if the attachment was found; otherwise, false."
+      description: "True if the attachment was found; otherwise, false."
   example: 
   - "\n<pre><code>#setLanguageLevel 3;\n\nHTTP http;\n\nif(http.addAttachmentData(24))\n{\n  Byte[] res = http.post(&quot;https://httpbin.org/post&quot;);\n  if (!http.hasError())\n    print(String(res));\n  else\n    print(http.getErrorMessage());</code></pre>\n"
 - uid: CRMScript.Native.HTTP.addBinaryData(Byte[])
@@ -96,7 +96,7 @@ items:
       type: CRMScript.Global.Byte[]
       description: "An array of Bytes containing the binary data you want to apply to the request body."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>#setLanguageLevel 3;\n\nHTTP http;\nByte[] image = http.get(&quot;https://httpbin.org/image/png&quot;);\nif (!http.hasError())\n{\n  http.addBinaryData(image);\n  http.addHeader(&quot;Content-Type&quot;, &quot;image/png&quot;);\n  Byte[] res = http.post(&quot;https://httpbin.org/post&quot;);\n  print(String(res));\n}\nelse\n{\n  print(http.getErrorMessage());\n}</code></pre>\n"
 - uid: CRMScript.Native.HTTP.addDocumentData(Integer)
@@ -119,7 +119,7 @@ items:
       description: "The ID of the document you want to upload."
     return:
       type: CRMScript.Global.Bool
-      description: true if the document was found; otherwise, false."
+      description: "True if the document was found; otherwise, false."
   example: 
   - "\n<pre><code>#setLanguageLevel 3;\n\nHTTP http;\n\nif(http.addDocumentData(24))\n{\n  Byte[] res = http.post(&quot;https://httpbin.org/post&quot;);\n  if (!http.hasError())\n    print(String(res));\n  else\n    print(http.getErrorMessage());\n}</code></pre>\n"
 - uid: CRMScript.Native.HTTP.addHeader(String,String)
@@ -139,10 +139,10 @@ items:
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: name of header"
+      description: "Name of header"
     - id: value
       type: CRMScript.Global.String
-      description: value of header."
+      description: "Value of header."
     return:
       type: CRMScript.Global.Void 
   example: 
@@ -164,7 +164,7 @@ items:
     parameters:
     - id: url
       type: CRMScript.Global.String
-      description: What to delete."
+      description: "What to delete."
     return:
       type: CRMScript.Global.Byte[]
       descending: the result in a byte array."
@@ -187,7 +187,7 @@ items:
     parameters:
     - id: url
       type: CRMScript.Global.String
-      description: What to delete."
+      description: "What to delete."
     return:
       type: CRMScript.NetServer.NSStream."
   example: 
@@ -335,10 +335,10 @@ items:
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: What to get (statusCode)."
+      description: "What to get (statusCode)."
     return:
       type: CRMScript.Global.String
-      description: values from the instance."
+      description: "Values from the instance."
   example: 
 - uid: CRMScript.Native.HTTP.hasError()
   commentId: M:CRMScript.Native.HTTP.hasError()
@@ -357,7 +357,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if there was an error in the environment; otherwise, false."
+      description: "True if there was an error in the environment; otherwise, false."
   example: 
 - uid: CRMScript.Native.HTTP.open(String)
   commentId: M:CRMScript.Native.HTTP.open(String)
@@ -379,7 +379,7 @@ items:
       description: "The URL to open. http://..."
     return:
       type: CRMScript.Global.Byte[]
-      description: result as a Byte array."
+      description: "Result as a Byte array."
   example: 
   - "\n<pre><code>HTTP h;\n\nByte[] b = h.open(&quot;https://httpbin.org/&quot;);\n\nif (h.hasError())\n  print(h.getErrorMessage());\nelse</code></pre>\n"
 - uid: CRMScript.Native.HTTP.openAsStream(String)
@@ -536,9 +536,9 @@ items:
     parameters:
     - id: debug
       type: CRMScript.Global.Bool
-      description: true to turn debug on, false to turn it off."
+      description: "True to turn debug on, false to turn it off."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.HTTP.setOption(String,Bool)
   commentId: M:CRMScript.Native.HTTP.setOption(String,Bool)
@@ -562,7 +562,7 @@ items:
       type: CRMScript.Global.String
       description: "See table."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>HTTP h;\n\nh.addHeader(&quot;header&quot;, &quot;test&quot;);\nh.setValue(&quot;key&quot;, &quot;value&quot;);\nh.setValue(&quot;key2&quot;, &quot;value2&quot;);\nh.setOption(&quot;followLocation&quot;, &quot;true&quot;);\n\nByte[] b = h.post(&quot;https://httpbin.org/post&quot;);\n\nif (h.hasError())\n  print(h.getErrorMessage());\nelse\n  print(String(b));\n\n//Here is an example for creating an issue in JIRA, hosted by Atlassian\n\nHTTP h2;\nString json = &quot; {\n  &quot;fields&quot;: {\n    &quot;project&quot;: {\n      &quot;key&quot;: &quot;SUP&quot;\n    },\n&quot;summary&quot;: &quot;I have a problem!.&quot;,\n&quot;description&quot;: &quot;Thats awesome&quot;,\n    &quot;issuetype&quot;: {\n      &quot;name&quot;: &quot;Bug&quot;\n    }\n  }\n}&quot;;\n\nHTTP h;\nh.setOption(&quot;username&quot;, &quot;theUsername&quot;);\nh.setOption(&quot;password&quot;, &quot;thePassword&quot;);\nh.addHeader(&quot;Content-Type&quot;, &quot;application/json&quot;);\nh.setOption(&quot;parameters&quot;, json);\nprint(String(h.post(&quot;https://theInstance.atlassian.net/rest/api/2/issue/&quot;)));</code></pre>\n"
 - uid: CRMScript.Native.HTTP.setValue(String,String)
@@ -587,7 +587,7 @@ items:
       type: CRMScript.Global.String
       description: "The value."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>HTTP h;\n\nh.addHeader(&quot;header&quot;, &quot;test&quot;);\nh.setValue(&quot;key&quot;, &quot;value&quot;);\nh.setValue(&quot;key2&quot;, &quot;value2&quot;);\nh.setOption(&quot;followLocation&quot;, &quot;true&quot;);\nByte[] b = h.put(&quot;https://httpbin.org/put&quot;);\nif (h.hasError())\n  print(h.getErrorMessage());\nelse</code></pre>\n"
 references:
