--- a/docs/api-reference/CRMScript.Native.HtmlElement.yml
+++ b/docs/api-reference/CRMScript.Native.HtmlElement.yml
@@ -45,7 +45,7 @@ items:
     content: Void clearValue()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.HtmlElement.getFieldValue(String)
   commentId: M:CRMScript.Native.HtmlElement.getFieldValue(String)
@@ -124,7 +124,7 @@ items:
     parameters:
     - id: noId
       type: CRMScript.Global.Bool
-      description: omit element ID if it is the 1st element?
+      description: "Omit element ID if it is the 1st element?"
     return:
       type: CRMScript.Global.String
       description: "The tabulator index string of the element."
@@ -165,7 +165,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the HtmlElement says it is empty; otherwise, false."
+      description: "True if the HtmlElement says it is empty; otherwise, false."
   example: 
 - uid: CRMScript.Native.HtmlElement.setDisabled(Bool)
   commentId: M:CRMScript.Native.HtmlElement.setDisabled(Bool)
@@ -184,9 +184,9 @@ items:
     parameters:
     - id: invisible
       type: CRMScript.Global.Bool
-      description: true if the element should be invisible."
+      description: "True if the element should be invisible."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.HtmlElement.setErrorMessage(String)
   commentId: M:CRMScript.Native.HtmlElement.setErrorMessage(String)
@@ -207,7 +207,7 @@ items:
       type: CRMScript.Global.String
       description: "The message to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>HtmlElement page = getHtmlElement(&quot;HtmlPage&quot;);\npage.setErrorMessage(&quot;This page contains an error&quot;);</code></pre>\n"
 - uid: CRMScript.Native.HtmlElement.setFieldValue(String,Map)
@@ -230,9 +230,9 @@ items:
       description: 
     - id: values
       type: CRMScript.Native.Map
-      description: Map of values."
+      description: "Map of values."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>HtmlElement formPage;\n\nMap m;\nm.insert(&quot;name&quot;, &quot;superButton&quot;);\nm.insert(&quot;label&quot;, &quot;Click me!&quot;);\nm.insert(&quot;style&quot;, &quot;StyleGreen&quot;);\n\nformPage.setFieldValue(&quot;addButton&quot;, m);</code></pre>\n"
 - uid: CRMScript.Native.HtmlElement.setFromCgi()
@@ -251,7 +251,7 @@ items:
     content: Void setFromCgi()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.HtmlElement.setInfoMessage(String)
   commentId: M:CRMScript.Native.HtmlElement.setInfoMessage(String)
@@ -272,7 +272,7 @@ items:
       type: CRMScript.Global.String
       description: "The message."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.HtmlElement.setNotEditable(Bool)
   commentId: M:CRMScript.Native.HtmlElement.setNotEditable(Bool)
@@ -291,9 +291,9 @@ items:
     parameters:
     - id: canEdit
       type: CRMScript.Global.Bool
-      description: Can the element be edited?
+      description: "Can the element be edited?"
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.HtmlElement.setValue(String)
   commentId: M:CRMScript.Native.HtmlElement.setValue(String)
@@ -312,9 +312,9 @@ items:
     parameters:
     - id: value
       type: CRMScript.Global.String
-      description: value of the element."
+      description: "Value of the element."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>HtmlElement selectDate;\nselectDate.setValue(&quot;2020.09.10&quot;);</code></pre><pre><code>HtmlElement t;\nt.setValue(&quot;x_boolean&quot;, &quot;1&quot;)</code></pre>\n"
 - uid: CRMScript.Native.HtmlElement.toBool()
