--- a/docs/api-reference/CRMScript.Native.Inbox.yml
+++ b/docs/api-reference/CRMScript.Native.Inbox.yml
@@ -27,7 +27,7 @@ items:
   summary: "\nInitializes a new instance of the Inbox class.\n"
   remarks: 
   syntax: 
-    content: Inbox."
+    content: Inbox
   example:
 - uid: CRMScript.Native.Inbox.addSmtpMail(String,String,Integer)
   commentId: M:CRMScript.Native.Inbox.addSmtpMail(String,String,Integer)
