--- a/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
+++ b/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
@@ -37,7 +37,7 @@ items:
   summary: "\nInitializes a new instance of the InvoiceEntry class.\n"
   remarks: 
   syntax: 
-    content: InvoiceEntry."
+    content: InvoiceEntry
   example: 
   - "\n<pre><code>InvoiceEntry i;\n\ni.setValue(&quot;description&quot;, &quot;test&quot;);\ni.setValue(&quot;quantity&quot;, &quot;1&quot;);\ni.setValue(&quot;pricePrUnit&quot;, &quot;700&quot;);\ni.setValue(&quot;discount&quot;, &quot;0.2&quot;);\nDate d; // Default value for date is today\ni.setValue(&quot;date&quot;, d.toString());</code></pre>\n"
 - uid: CRMScript.Native.InvoiceEntry.getDiscount()
@@ -95,7 +95,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: Price per unit as a String-representation of a number with 2 decimals accuracy."
+      description: "Price per unit as a String-representation of a number with 2 decimals accuracy."
   example: 
 - uid: CRMScript.Native.InvoiceEntry.getValue(String)
   commentId: M:CRMScript.Native.InvoiceEntry.getValue(String)
@@ -114,7 +114,7 @@ items:
     parameters:
     - id: field
       type: CRMScript.Global.String
-      description: Name of the field which contains the value."
+      description: "Name of the field which contains the value."
     return:
       type: CRMScript.Global.String
       description: "The value of the field."
@@ -179,7 +179,7 @@ items:
       type: CRMScript.Global.Float
       description: "The discount in percent."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.InvoiceEntry.setDiscountMoney(Float)
   commentId: M:CRMScript.Native.InvoiceEntry.setDiscountMoney(Float)
@@ -200,7 +200,7 @@ items:
       type: CRMScript.Global.Float
       description: "The discount in money."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.InvoiceEntry.setPricePrUnit(Float)
   commentId: M:CRMScript.Native.InvoiceEntry.setPricePrUnit(Float)
@@ -221,7 +221,7 @@ items:
       type: CRMScript.Global.Float
       description: "The price per unit."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.InvoiceEntry.setValue(String,String)
   commentId: M:CRMScript.Native.InvoiceEntry.setValue(String,String)
@@ -245,7 +245,7 @@ items:
       type: CRMScript.Global.String
       description: "The value of the specified field."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.InvoiceEntry
