--- a/docs/api-reference/CRMScript.Native.JSONBuilder.yml
+++ b/docs/api-reference/CRMScript.Native.JSONBuilder.yml
@@ -37,7 +37,7 @@ items:
   summary: "\nInitializes a new instance of the JSONBuilder class.\n"
   remarks: 
   syntax: 
-    content: JSONBuilder."
+    content: JSONBuilder
   example: 
   - "\n<pre><code>JSONBuilder jb;\njb.pushObject(&quot;&quot;);\njb.pushArray(&quot;persons&quot;);\n\njb.pushObject(&quot;&quot;);\njb.addString(&quot;firstname&quot;, &quot;John&quot;);\njb.addInteger(&quot;age&quot;, 40);\njb.popLevel();\n\njb.pushObject(&quot;&quot;);\njb.addString(&quot;firstname&quot;, &quot;Peter&quot;);\njb.addInteger(&quot;age&quot;, 34);\njb.popLevel();\n\njb.popLevel();\njb.popLevel(); // jb.finalize() could be used to pop all levels</code></pre>\n"
 - uid: CRMScript.Native.JSONBuilder.addBoolean(String,Bool)
@@ -62,7 +62,7 @@ items:
       type: CRMScript.Global.Bool
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.JSONBuilder.addFloat(String)
   commentId: M:CRMScript.Native.JSONBuilder.addFloat(String)
@@ -86,7 +86,7 @@ items:
       type: CRMScript.Global.Float
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.JSONBuilder.addInteger(String,Integer)
   commentId: M:CRMScript.Native.JSONBuilder.addInteger(String,Integer)
@@ -134,7 +134,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.JSONBuilder.finalize()
   commentId: M:CRMScript.Native.JSONBuilder.finalize()
@@ -152,7 +152,7 @@ items:
     content: Void finalize()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.JSONBuilder.getString()
   commentId: M:CRMScript.Native.JSONBuilder.getString()
@@ -189,7 +189,7 @@ items:
     content: Void popLevel()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.JSONBuilder.pushArray(String)
   commentId: M:CRMScript.Native.JSONBuilder.pushArray(String)
@@ -210,7 +210,7 @@ items:
       type: CRMScript.Global.String
       description:
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.JSONBuilder.pushObject(String)
   commentId: M:CRMScript.Native.JSONBuilder.pushObject(String)
@@ -231,7 +231,7 @@ items:
       type: CRMScript.Global.String
       description:
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.JSONBuilder.setPrettyPrint(Integer)
   commentId: M:CRMScript.Native.JSONBuilder.setPrettyPrint(Integer)
@@ -250,9 +250,9 @@ items:
     parameters:
     - id: indent
       type: CRMScript.Global.Integer
-      description: Indent &gt; 0 will cause pretty printing, where indent is the number of spaces to indent a block level with."
+      description: "Indent &gt; 0 will cause pretty printing, where indent is the number of spaces to indent a block level with."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.JSONBuilder
