--- a/docs/api-reference/CRMScript.Native.Knowledge.yml
+++ b/docs/api-reference/CRMScript.Native.Knowledge.yml
@@ -28,7 +28,7 @@ items:
   summary: "\nInitializes a new instance of the Knowledge class.\n"
   remarks: 
   syntax: 
-    content: Knowledge."
+    content: Knowledge
   example: 
 - uid: CRMScript.Native.Knowledge.buildExternalEntryURLWithParser(Integer,Parser)
   commentId: M:CRMScript.Native.Knowledge.buildExternalEntryURLWithParser(Integer,Parser)
@@ -77,7 +77,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.Knowledge
