--- a/docs/api-reference/CRMScript.Native.License.yml
+++ b/docs/api-reference/CRMScript.Native.License.yml
@@ -32,7 +32,7 @@ items:
   summary: "\nDeprecated in 7.1.\n"
   remarks: 
   syntax: 
-    content: License."
+    content: License
   example: 
 - uid: CRMScript.Native.License.#ctor(String,String)
   commentId: M:CRMScript.Native.License.#ctor(String,String)
@@ -57,7 +57,7 @@ items:
       description:  License key."
     return:
       type: CRMScript.Native.License
-      description: License object."
+      description: "License object."
   example: 
 - uid: CRMScript.Native.License.getInfo()
   commentId: M:CRMScript.Native.License.getInfo()
@@ -95,7 +95,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: reason why not valid or null string if valid."
+      description: "Reason why not valid or null string if valid."
   example: 
 - uid: CRMScript.Native.License.getValue(String)
   commentId: M:CRMScript.Native.License.getValue(String)
@@ -114,7 +114,7 @@ items:
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: Name of the value to extract."
+      description: "Name of the value to extract."
     return:
       type: CRMScript.Global.String
       description:
@@ -136,7 +136,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the key is legal."
+      description: "True if the key is legal."
   example: 
 - uid: CRMScript.Native.License.toParser(Parser)
   commentId: M:CRMScript.Native.License.toParser(Parser)
@@ -157,7 +157,7 @@ items:
       type: CRMScript.Native.Parser
       description: "The Parser instance to populate with values."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.License
