--- a/docs/api-reference/CRMScript.Native.MacroParameter.yml
+++ b/docs/api-reference/CRMScript.Native.MacroParameter.yml
@@ -46,7 +46,7 @@ items:
   summary: "\nInitializes a new instance of the MacroParameter class.\n"
   remarks: 
   syntax: 
-    content: MacroParameter."
+    content: MacroParameter
   example: 
 - uid: CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
   commentId: M:CRMScript.Native.MacroParameter.#ctor(String,String,Map,String,String,Bool)
@@ -80,7 +80,7 @@ items:
       description: "A longer description of the parameter."
     - id: isOptional
       type: CRMScript.Global.Bool
-      description: Whether the parameter is optional."
+      description: "Whether the parameter is optional."
     return:
       type: CRMScript.Native.MacroParameter."
   example: 
@@ -116,13 +116,13 @@ items:
       description: "A longer description of the parameter."
     - id: isOptional
       type: CRMScript.Global.Bool
-      description: Whether the parameter is optional."
+      description: "Whether the parameter is optional."
     - id: defaultValue
       type: CRMScript.Global.String
       description: 
     - id: defaultValueIsFixed
       type: CRMScript.Global.Bool
-      description: whether or not the default value of the parameter is fixed."
+      description: "Whether or not the default value of the parameter is fixed."
     return:
       type: CRMScript.Native.MacroParameter."
   example: 
@@ -181,7 +181,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the value is fixed; otherwise, false."
+      description: "True if the value is fixed; otherwise, false."
   example: 
 - uid: CRMScript.Native.MacroParameter.getIsOptional()
   commentId: M:CRMScript.Native.MacroParameter.getIsOptional()
@@ -200,7 +200,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the value is optional; false if mandatory."
+      description: "True if the value is optional; false if mandatory."
   example: 
 - uid: CRMScript.Native.MacroParameter.getLabel()
   commentId: M:CRMScript.Native.MacroParameter.getLabel()
@@ -315,9 +315,9 @@ items:
     parameters:
     - id: values
       type: CRMScript.Native.Map
-      description: values to set."
+      description: "Values to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MacroParameter.setDescription(String)
   commentId: M:CRMScript.Native.MacroParameter.setDescription(String)
@@ -338,7 +338,7 @@ items:
       type: CRMScript.Global.String
       description: "The text to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MacroParameter.setIsFixedValue(Bool)
   commentId: M:CRMScript.Native.MacroParameter.setIsFixedValue(Bool)
@@ -359,7 +359,7 @@ items:
       type: CRMScript.Global.Bool
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MacroParameter.setIsOptional(Bool)
   commentId: M:CRMScript.Native.MacroParameter.setIsOptional(Bool)
@@ -380,7 +380,7 @@ items:
       type: CRMScript.Global.Bool
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MacroParameter.setLabel(String)
   commentId: M:CRMScript.Native.MacroParameter.setLabel(String)
@@ -401,7 +401,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MacroParameter.setName(String)
   commentId: M:CRMScript.Native.MacroParameter.setName(String)
@@ -422,7 +422,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MacroParameter.setSourcePath(String)
   commentId: M:CRMScript.Native.MacroParameter.setSourcePath(String)
@@ -443,7 +443,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n&quot;loadTicket.id&quot;, &quot;_environment.entryId&quot;\n"
 - uid: CRMScript.Native.MacroParameter.setType(String)
@@ -465,7 +465,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MacroParameter.setValue(String)
   commentId: M:CRMScript.Native.MacroParameter.setValue(String)
@@ -486,7 +486,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.MacroParameter
