--- a/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
+++ b/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
@@ -31,7 +31,7 @@ items:
   summary: "\nInitializes a new instance of the MacroReturnValue class.\n"
   remarks: 
   syntax: 
-    content: MacroReturnValue."
+    content: MacroReturnValue
   example: 
 - uid: CRMScript.Native.MacroReturnValue.#ctor(String,String)
   commentId: M:CRMScript.Native.MacroReturnValue.#ctor(String,String)
