--- a/docs/api-reference/CRMScript.Native.MainMenu.yml
+++ b/docs/api-reference/CRMScript.Native.MainMenu.yml
@@ -48,9 +48,9 @@ items:
       description: "The label of the group"
     - id: image
       type: CRMScript.Global.String
-      description: URL to the actual file."
+      description: "URL to the actual file."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addGroup(&quot;My label&quot;, &quot;http://..../graphics/picture.png&quot;);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.addGroup(String,String,Integer)
@@ -73,12 +73,12 @@ items:
       description: "The label of the group"
     - id: image
       type: CRMScript.Global.String
-      description: URL to the actual file"
+      description: "URL to the actual file"
     - id: position
       type: CRMScript.Global.Integer
       description: "The position inside the menu of this group."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addGroup(&quot;My label2&quot;, &quot;http://..../graphics/picture.png&quot;, 3);</code></pre>Add the following javascript code: <code>&quot;window.location='http://www.superoffice.com'&quot;</code>\n"
 - uid: CRMScript.Native.MainMenu.addGroup(String,String,Integer,String)
@@ -101,15 +101,15 @@ items:
       description: "The label of the group"
     - id: image
       type: CRMScript.Global.String
-      description: URL to the actual file"
+      description: "URL to the actual file"
     - id: position
       type: CRMScript.Global.Integer
       description: "The position inside the menu of this group"
     - id: onClick
       type: CRMScript.Global.String
-      description: JavaScript that is executed when clicking the group."
+      description: "JavaScript that is executed when clicking the group."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addGroup(&quot;My label&quot;, &quot;http://..../graphics/picture.png&quot;);\nmenu.addGroup(&quot;My label2&quot;, &quot;http://..../graphics/picture.png&quot;, 3, &quot;window.location='http://www.superoffice.com'&quot;);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.addItem(String,String)
@@ -134,7 +134,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addItem(&quot;List equipment&quot;, getProgram(1) + &quot;&amp;action=listExtraTable&amp;extraTable=y_equipment&quot;);\n\nmenu.addItem(&quot;New unit&quot;, getProgram(1) + &quot;&amp;action=editExtraTableEntry&amp;extraTable=y_equipment&quot;, 1, 1);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer)
@@ -160,12 +160,12 @@ items:
       description: 
     - id: group
       type: CRMScript.Global.Integer
-      description: Optional. Which header this item belongs to"
+      description: "Optional. Which header this item belongs to"
     - id: position
       type: CRMScript.Global.Integer
-      description: Optional. The position inside the group of this item."
+      description: "Optional. The position inside the group of this item."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addItem(&quot;List equipment&quot;, getProgram(1) + &quot;&amp;action=listExtraTable&amp;extraTable=y_equipment&quot;);\n\nmenu.addItem(&quot;New unit&quot;, getProgram(1) + &quot;&amp;action=editExtraTableEntry&amp;extraTable=y_equipment&quot;, 1, 1);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String)
@@ -191,21 +191,21 @@ items:
       description: 
     - id: group
       type: CRMScript.Global.Integer
-      description: Optional. Which header this item belongs to"
+      description: "Optional. Which header this item belongs to"
     - id: position
       type: CRMScript.Global.Integer
-      description: Optional. The position inside the group of this item"
+      description: "Optional. The position inside the group of this item"
     - id: onClick
       type: CRMScript.Global.String
-      description: Optional. JavaScript that is executed when clicking the item"
+      description: "Optional. JavaScript that is executed when clicking the item"
     - id: itemId
       type: CRMScript.Global.String
-      description: Optional. A programmatic ID for the item"
+      description: "Optional. A programmatic ID for the item"
     - id: target
       type: CRMScript.Global.String
-      description: Optional. The target attribute of the link."
+      description: "Optional. The target attribute of the link."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addItem(&quot;List equipment&quot;, getProgram(1) + &quot;&amp;action=listExtraTable&amp;extraTable=y_equipment&quot;);\n\nmenu.addItem(&quot;New unit&quot;, getProgram(1) + &quot;&amp;action=editExtraTableEntry&amp;extraTable=y_equipment&quot;, 1, 1);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String,String)
@@ -231,24 +231,24 @@ items:
       description: 
     - id: group
       type: CRMScript.Global.Integer
-      description: Optional. Which header this item belongs to"
+      description: "Optional. Which header this item belongs to"
     - id: position
       type: CRMScript.Global.Integer
-      description: Optional. The position inside the group of this item"
+      description: "Optional. The position inside the group of this item"
     - id: onClick
       type: CRMScript.Global.String
-      description: Optional. JavaScript that is executed when clicking the item"
+      description: "Optional. JavaScript that is executed when clicking the item"
     - id: itemId
       type: CRMScript.Global.String
-      description: Optional. A programmatic ID for the item"
+      description: "Optional. A programmatic ID for the item"
     - id: target
       type: CRMScript.Global.String
-      description: Optional. The target attribute of the link"
+      description: "Optional. The target attribute of the link"
     - id: iconUrl
       type: CRMScript.Global.String
-      description: Optional. URL of a custom icon."
+      description: "Optional. URL of a custom icon."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addItem(&quot;List equipment&quot;, getProgram(1) + &quot;&amp;action=listExtraTable&amp;extraTable=y_equipment&quot;);\n\nmenu.addItem(&quot;New unit&quot;, getProgram(1) + &quot;&amp;action=editExtraTableEntry&amp;extraTable=y_equipment&quot;, 1, 1);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.clear()
@@ -267,7 +267,7 @@ items:
     content: Void clear()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MainMenu.deleteGroup(Integer)
   commentId: M:CRMScript.Native.MainMenu.deleteGroup(Integer)
@@ -288,7 +288,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>Integer pos = 3;\nMainMenu menu = getMainMenu();\nif (menu.getGroupId(pos) == &quot;my label&quot;) {\n  menu.deleteGroup(pos);\n}</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.deleteItem(Integer,Integer)
@@ -313,7 +313,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.MainMenu.getGroupId(Integer)
   commentId: M:CRMScript.Native.MainMenu.getGroupId(Integer)
@@ -355,7 +355,7 @@ items:
     parameters:
     - id: label
       type: CRMScript.Global.String
-      description: Group label (ID)."
+      description: "Group label (ID)."
     return:
       type: CRMScript.Global.Integer
       description: "The position of a specific group in the main menu."
