--- a/docs/api-reference/CRMScript.Native.Map.yml
+++ b/docs/api-reference/CRMScript.Native.Map.yml
@@ -121,7 +121,7 @@ items:
       description: "The key to search for."
     return:
       type: CRMScript.Global.Bool
-      description: True if the key exists in the map."
+      description: "True if the key exists in the map."
 - uid: CRMScript.Native.Map.size()
   commentId: M:CRMScript.Native.Map.size()
   id: size()
@@ -319,7 +319,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if the internal iterator is past the end of the map, otherwise False."
+      description: "True if the internal iterator is past the end of the map, otherwise False."
 - uid: CRMScript.Native.Map.first()
   commentId: M:CRMScript.Native.Map.first()
   id: first()
@@ -339,7 +339,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: True if map is not empty, otherwise false."
+      description: "True if map is not empty, otherwise false."
 - uid: CRMScript.Native.Map.next()
   commentId: M:CRMScript.Native.Map.next()
   id: next()
@@ -359,7 +359,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: False if eof(), otherwise true."
+      description: "False if eof(), otherwise true."
 - uid: CRMScript.Native.Map.toJson()
   commentId: M:CRMScript.Native.Map.toJson()
   id: toJson()
