--- a/docs/api-reference/CRMScript.Native.Notify.yml
+++ b/docs/api-reference/CRMScript.Native.Notify.yml
@@ -32,7 +32,7 @@ items:
   summary: "\nInitializes a new instance of the Notify class.\n"
   remarks: 
   syntax: 
-    content: Notify."
+    content: Notify
   example: 
 - uid: CRMScript.Native.Notify.sendCustomMessage(Integer,String)
   commentId: M:CRMScript.Native.Notify.sendCustomMessage(Integer,String)
@@ -56,7 +56,7 @@ items:
       type: CRMScript.Global.String
       description: "The notify message."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Notify.sendNewTicket(Integer)
   commentId: M:CRMScript.Native.Notify.sendNewTicket(Integer)
@@ -77,7 +77,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of the ticket to notify about."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Notify.sendNewTicket(Integer,Bool)
   commentId: M:CRMScript.Native.Notify.sendNewTicket(Integer,Bool)
@@ -99,9 +99,9 @@ items:
       description: "The ID of the ticket to notify about"
     - id: skipCategoryMemberNotification
       type: CRMScript.Global.Bool
-      description: do not notify members or the email notification address set up on the category."
+      description: "Do not notify members or the email notification address set up on the category."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Notify.sendNewTicketMessage(Integer,Bool)
   commentId: M:CRMScript.Native.Notify.sendNewTicketMessage(Integer,Bool)
@@ -123,9 +123,9 @@ items:
       description: "The ID of the ticket to be notified about"
     - id: onlyToHotLlist
       type: CRMScript.Global.Bool
-      description: if true, only those with this ticket on their hotlists will be notified."
+      description: "If true, only those with this ticket on their hotlists will be notified."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Notify.sendTicketActivated(Integer)
   commentId: M:CRMScript.Native.Notify.sendTicketActivated(Integer)
@@ -146,7 +146,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of the ticket to be notified about."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Notify.sendTicketTakenOver(Integer,Integer,Integer)
   commentId: M:CRMScript.Native.Notify.sendTicketTakenOver(Integer,Integer,Integer)
@@ -173,7 +173,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of the user who now owns the ticket."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.Notify
