--- a/docs/api-reference/CRMScript.Native.Parser.yml
+++ b/docs/api-reference/CRMScript.Native.Parser.yml
@@ -34,7 +34,7 @@ items:
   summary: "\nInitializes a new instance of the Parser class.\n"
   remarks: 
   syntax: 
-    content: Parser."
+    content: Parser
   example: 
   - "\n<pre><code>Parser p;\np.setVariable(&quot;firstName&quot;, &quot;Jack&quot;);\np.setVariable(&quot;lastName&quot;, &quot;Black&quot;);\n\nString output = p.parseString(&quot;Hello [[firstName]] [[lastName]]!&quot;);\n\nprintLine(output);</code></pre>\n"
 - uid: CRMScript.Native.Parser.addVariable(String,String)
@@ -59,7 +59,7 @@ items:
       type: CRMScript.Global.String
       description: "The value of the field."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Parser.evaluateString(String)
   commentId: M:CRMScript.Native.Parser.evaluateString(String)
@@ -174,7 +174,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Parser.toParser(Parser)
   commentId: M:CRMScript.Native.Parser.toParser(Parser)
