--- a/docs/api-reference/CRMScript.Native.Priority.yml
+++ b/docs/api-reference/CRMScript.Native.Priority.yml
@@ -27,7 +27,7 @@ items:
   summary: "\nInitializes a new instance of the Priority class.\n"
   remarks: 
   syntax: 
-    content: Priority."
+    content: Priority
   example: 
 - uid: CRMScript.Native.Priority.checkEscalating(Integer,Integer)
   commentId: M:CRMScript.Native.Priority.checkEscalating(Integer,Integer)
@@ -51,7 +51,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The action that triggered this escalation."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.Priority
