--- a/docs/api-reference/CRMScript.Native.ReplyTemplate.yml
+++ b/docs/api-reference/CRMScript.Native.ReplyTemplate.yml
@@ -34,7 +34,7 @@ items:
   summary: "\nInitializes a new instance of the ReplyTemplate class.\n"
   remarks: 
   syntax: 
-    content: ReplyTemplate."
+    content: ReplyTemplate
   example: 
   - "\n<pre><code>ReplyTemplate rt;\n\nrt.load(2); // Loads a reply template with id = 2\n\nParser p;</code></pre>\n"
 - uid: CRMScript.Native.ReplyTemplate.getAttachments(Integer)
@@ -54,7 +54,7 @@ items:
     parameters:
     - id: lang
       type: CRMScript.Global.Integer
-      description: Language as an integer."
+      description: "Language as an integer."
     return:
       type: CRMScript.Global.Integer[]
       description: "Attachment IDs belonging to a reply template."
@@ -76,7 +76,7 @@ items:
     parameters:
     - id: language
       type: CRMScript.Global.Integer
-      description: Language as an integer."
+      description: "Language as an integer."
     return:
       type: CRMScript.Global.String
       description: "The reply template HTML body, in the language given."
@@ -117,7 +117,7 @@ items:
     parameters:
     - id: language
       type: CRMScript.Global.Integer
-      description: Language as an integer."
+      description: "Language as an integer."
     return:
       type: CRMScript.Global.String
       description: "The reply template plain text body in the given language."
@@ -139,7 +139,7 @@ items:
     parameters:
     - id: language
       type: CRMScript.Global.Integer
-      description: Language as an integer."
+      description: "Language as an integer."
     return:
       type: CRMScript.Global.String
       description: "The reply template SMS body in the language given."
@@ -161,7 +161,7 @@ items:
     parameters:
     - id: language
       type: CRMScript.Global.Integer
-      description: Language as an integer."
+      description: "Language as an integer."
     return:
       type: CRMScript.Global.String
       description: "The reply template plain-text subject in the language given."
@@ -183,10 +183,10 @@ items:
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: Reply template ID."
+      description: "Reply template ID."
     return:
       type: CRMScript.Global.Bool
-      description: True if reply template with given ID loaded successfully; otherwise, false."
+      description: "True if reply template with given ID loaded successfully; otherwise, false."
   example: 
 references:
 - uid: CRMScript.Native.ReplyTemplate
