--- a/docs/api-reference/CRMScript.Native.SpmMessage.yml
+++ b/docs/api-reference/CRMScript.Native.SpmMessage.yml
@@ -33,7 +33,7 @@ items:
   summary: "\nInitializes a new instance of the SpmMessage class.\n"
   remarks: 
   syntax: 
-    content: SpmMessage."
+    content: SpmMessage
   example: 
 - uid: CRMScript.Native.SpmMessage.save()
   commentId: M:CRMScript.Native.SpmMessage.save()
@@ -94,7 +94,7 @@ items:
       type: CRMScript.Global.String
       description: "The HTML version of the body."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmMessage.setDescription(String)
   commentId: M:CRMScript.Native.SpmMessage.setDescription(String)
@@ -115,7 +115,7 @@ items:
       type: CRMScript.Global.String
       description: "A text which describes this message."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmMessage.setFolderId(Integer)
   commentId: M:CRMScript.Native.SpmMessage.setFolderId(Integer)
@@ -136,7 +136,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of the folder this message will be stored in. A value of -1 indicates that it should be stored in the root folder."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmMessage.setHeader(String)
   commentId: M:CRMScript.Native.SpmMessage.setHeader(String)
@@ -157,7 +157,7 @@ items:
       type: CRMScript.Global.String
       description: "The the information."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<code>Header1: Value1\nHeader2: Value2</code>\n"
 - uid: CRMScript.Native.SpmMessage.setSubject(String)
