--- a/docs/api-reference/CRMScript.Native.SpmStaticList.yml
+++ b/docs/api-reference/CRMScript.Native.SpmStaticList.yml
@@ -34,7 +34,7 @@ items:
   summary: "\nInitializes a new instance of the SpmStaticList class.\n"
   remarks: 
   syntax: 
-    content: SpmStaticList."
+    content: SpmStaticList
   example: 
 - uid: CRMScript.Native.SpmStaticList.addRecipient(String,String)
   commentId: M:CRMScript.Native.SpmStaticList.addRecipient(String,String)
@@ -58,7 +58,7 @@ items:
       type: CRMScript.Global.String
       description: "The name of the recipient."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmStaticList.delete()
   commentId: M:CRMScript.Native.SpmStaticList.delete()
@@ -77,7 +77,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: if the list was actually deleted; otherwise, false."
+      description: "If the list was actually deleted; otherwise, false."
   example: 
 - uid: CRMScript.Native.SpmStaticList.getRecipients()
   commentId: M:CRMScript.Native.SpmStaticList.getRecipients()
@@ -118,7 +118,7 @@ items:
       description: "The ID of the static list."
     return:
       type: CRMScript.Global.Bool
-      description: false if the list was not found; otherwise, true."
+      description: "False if the list was not found; otherwise, true."
   example: 
 - uid: CRMScript.Native.SpmStaticList.removeRecipient(String)
   commentId: M:CRMScript.Native.SpmStaticList.removeRecipient(String)
@@ -139,7 +139,7 @@ items:
       type: CRMScript.Global.String
       description: "The email address of the recipient to be removed."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmStaticList.save()
   commentId: M:CRMScript.Native.SpmStaticList.save()
@@ -179,7 +179,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of the folder for this list."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmStaticList.setName(String)
   commentId: M:CRMScript.Native.SpmStaticList.setName(String)
@@ -200,7 +200,7 @@ items:
       type: CRMScript.Global.String
       description: "The name of the list."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.SpmStaticList
