--- a/docs/api-reference/CRMScript.Native.StatLib.yml
+++ b/docs/api-reference/CRMScript.Native.StatLib.yml
@@ -39,7 +39,7 @@ items:
   summary: "\nInitializes a new instance of the StatLib class.\n"
   remarks: 
   syntax: 
-    content: StatLib."
+    content: StatLib
   example: 
 - uid: CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer)
   commentId: M:CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer)
@@ -72,7 +72,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The number of decimals to use in the calculated value."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer,Integer)
   commentId: M:CRMScript.Native.StatLib.addAggregate(Integer,Integer,String,String,Integer,Integer)
@@ -108,7 +108,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The value is only calculated for the rows which have a unique value in this column."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.addCallback(Integer,String)
   commentId: M:CRMScript.Native.StatLib.addCallback(Integer,String)
@@ -132,7 +132,7 @@ items:
       type: CRMScript.Global.String
       description: "The Parser code to execute."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.addGroup(Integer,Bool)
   commentId: M:CRMScript.Native.StatLib.addGroup(Integer,Bool)
@@ -154,9 +154,9 @@ items:
       description: "The column to used to identify the groups"
     - id: desc
       type: CRMScript.Global.Bool
-      description: Sort order. True = descending, otherwise ascending."
+      description: "Sort order. True = descending, otherwise ascending."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.addGroup(Integer,Bool,Bool)
   commentId: M:CRMScript.Native.StatLib.addGroup(Integer,Bool,Bool)
@@ -178,12 +178,12 @@ items:
       description: "The column to used to identify the groups"
     - id: desc
       type: CRMScript.Global.Bool
-      description: Sort order. True = descending, otherwise ascending"
+      description: "Sort order. True = descending, otherwise ascending"
     - id: compareAsNumber
       type: CRMScript.Global.Bool
-      description: True if the value is a number and you want numeric sorting/grouping."
+      description: "True if the value is a number and you want numeric sorting/grouping."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.dropOrder()
   commentId: M:CRMScript.Native.StatLib.dropOrder()
@@ -201,7 +201,7 @@ items:
     content: Void dropOrder()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.execute(Parser)
   commentId: M:CRMScript.Native.StatLib.execute(Parser)
@@ -222,7 +222,7 @@ items:
       type: CRMScript.Native.Parser
       description: "The instance to store the results in."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.execute(StatResult)
   commentId: M:CRMScript.Native.StatLib.execute(StatResult)
@@ -243,7 +243,7 @@ items:
       type: CRMScript.Native.StatResult
       description: "The instance to store the results in."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setGenericSearch()
   commentId: M:CRMScript.Native.StatLib.setGenericSearch()
@@ -262,9 +262,9 @@ items:
     parameters:
     - id: gs
       type: CRMScript.Native.GenericSearch
-      description: "The GenericSearch entry to use. 
+      description: "The GenericSearch entry to use."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setName(String)
   commentId: M:CRMScript.Native.StatLib.setName(String)
@@ -285,7 +285,7 @@ items:
       type: CRMScript.Global.String
       description: "The name for the instance."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setSearchEngine()
   commentId: M:CRMScript.Native.StatLib.setSearchEngine()
@@ -306,7 +306,7 @@ items:
       type: CRMScript.Native.SearchEngine
       description: "The SearchEngine entry to use."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setSql(String)
   commentId: M:CRMScript.Native.StatLib.setSql(String)
@@ -328,7 +328,7 @@ items:
       type: CRMScript.Global.String
       description: "The SQL query to execute for the instance."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatLib.setStringMatrix()
   commentId: M:CRMScript.Native.StatLib.setStringMatrix()
@@ -349,7 +349,7 @@ items:
       type: CRMScript.Native.StringMatrix
       description: "The StringMatrix entry to use."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.StatLib
