--- a/docs/api-reference/CRMScript.Native.StringMatrix.yml
+++ b/docs/api-reference/CRMScript.Native.StringMatrix.yml
@@ -34,7 +34,7 @@ items:
   summary: "\nInitializes a new instance of the StringMatrix class.\n"
   remarks: 
   syntax: 
-    content: StringMatrix."
+    content: StringMatrix
   example: 
 - uid: CRMScript.Native.StringMatrix.addCell(String)
   commentId: M:CRMScript.Native.StringMatrix.addCell(String)
@@ -55,7 +55,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to store in the cell."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StringMatrix.addRow()
   commentId: M:CRMScript.Native.StringMatrix.addRow()
@@ -73,7 +73,7 @@ items:
     content: Void addRow()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StringMatrix.clear()
   commentId: M:CRMScript.Native.StringMatrix.clear()
@@ -91,7 +91,7 @@ items:
     content: Void clear()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StringMatrix.deleteRow(Integer)
   commentId: M:CRMScript.Native.StringMatrix.deleteRow(Integer)
@@ -112,7 +112,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The zero-based index of the row to delete."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StringMatrix.getCell(Integer,Integer)
   commentId: M:CRMScript.Native.StringMatrix.getCell(Integer,Integer)
@@ -205,7 +205,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to set in the specified cell."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.StringMatrix
