--- a/docs/api-reference/CRMScript.Native.TimeSpan.yml
+++ b/docs/api-reference/CRMScript.Native.TimeSpan.yml
@@ -44,7 +44,7 @@ items:
   summary: "\nInitializes a new instance of the TimeSpan class.\n"
   remarks: 
   syntax: 
-    content: TimeSpan."
+    content: TimeSpan
   example: 
 - uid: CRMScript.Native.TimeSpan.addDay(Integer)
   commentId: M:CRMScript.Native.TimeSpan.addDay(Integer)
@@ -63,7 +63,7 @@ items:
     parameters:
     - id: num
       type: CRMScript.Global.Integer
-      description: Number of days to add to the time span."
+      description: "Number of days to add to the time span."
     return:
       type: CRMScript.Global.Void
       description:
@@ -85,7 +85,7 @@ items:
     parameters:
     - id: num
       type: CRMScript.Global.Integer
-      description: Number of hours to add to the time span."
+      description: "Number of hours to add to the time span."
     return:
       type: CRMScript.Global.Void
       description:
@@ -107,7 +107,7 @@ items:
     parameters:
     - id: num
       type: CRMScript.Global.Integer
-      description: Number of minutes to add to the time span."
+      description: "Number of minutes to add to the time span."
     return:
       type: CRMScript.Global.Void
       description:
@@ -129,7 +129,7 @@ items:
     parameters:
     - id: num
       type: CRMScript.Global.Integer
-      description: Number of seconds to add to the time span."
+      description: "Number of seconds to add to the time span."
     return:
       type: CRMScript.Global.Void
       description:
@@ -151,7 +151,7 @@ items:
     parameters:
     - id: num
       type: CRMScript.Global.Integer
-      description: Number of years to add to the time span."
+      description: "Number of years to add to the time span."
     return:
       type: CRMScript.Global.Void
       description:
@@ -173,7 +173,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Day field as an integer."
+      description: "Day field as an integer."
   example: 
 - uid: CRMScript.Native.TimeSpan.getHour()
   commentId: M:CRMScript.Native.TimeSpan.getHour()
@@ -268,7 +268,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if this is a negative time span; otherwise, false."
+      description: "True if this is a negative time span; otherwise, false."
   example: 
 - uid: CRMScript.Native.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
   commentId: M:CRMScript.Native.TimeSpan.set(Integer,Integer,Integer,Integer,Integer)
@@ -287,19 +287,19 @@ items:
     parameters:
     - id: years
       type: CRMScript.Global.Integer
-      description: Number of years"
+      description: "Number of years"
     - id: days
       type: CRMScript.Global.Integer
-      description: Number of days"
+      description: "Number of days"
     - id: hours
       type: CRMScript.Global.Integer
-      description: Number of hours"
+      description: "Number of hours"
     - id: minutes
       type: CRMScript.Global.Integer
-      description: Number of minutes"
+      description: "Number of minutes"
     - id: seconds
       type: CRMScript.Global.Integer
-      description: Number of seconds."
+      description: "Number of seconds."
     return:
       type: CRMScript.Global.Void
       description:
@@ -419,16 +419,16 @@ items:
     parameters:
     - id: mode
       type: CRMScript.Global.Integer
-      description: Mode2Year = 0 Mode2Day = 1 Mode2Hour = 2 Mode2Min = 3 Mode2Sec = 4"
+      description: "Mode2Year = 0 Mode2Day = 1 Mode2Hour = 2 Mode2Min = 3 Mode2Sec = 4"
     - id: lang
       type: CRMScript.Global.Integer
       description: 0 = Norwegian; 1 = English; 2 = German; 3 = Swedish; 4 = Danish; 5 = Dutch"
     - id: maxMode
       type: CRMScript.Global.Integer
-      description: Mode2Year = 0 Mode2Day = 1 Mode2Hour = 2 Mode2Min = 3 Mode2Sec = 4"
+      description: "Mode2Year = 0 Mode2Day = 1 Mode2Hour = 2 Mode2Min = 3 Mode2Sec = 4"
     - id: short
       type: CRMScript.Global.Bool
-      description: True if you want short version of text (e.g. "m" instead of "minutes")."
+      description: "True if you want short version of text (for example, m instead of minutes)."
     return:
       type: CRMScript.Global.String
       description: "A string representation of the time span, on the given format and in the given language."
