--- a/docs/api-reference/CRMScript.Native.TimeZone.yml
+++ b/docs/api-reference/CRMScript.Native.TimeZone.yml
@@ -28,7 +28,7 @@ items:
   summary: "\nInitializes a new instance of the TimeZone class.\n"
   remarks: 
   syntax: 
-    content: TimeZone."
+    content: TimeZone
   example: 
 - uid: CRMScript.Native.TimeZone.getTimeZone()
   commentId: M:CRMScript.Native.TimeZone.getTimeZone()
@@ -66,7 +66,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Difference from GMT in seconds."
+      description: "Difference from GMT in seconds."
   example: 
 references:
 - uid: CRMScript.Native.TimeZone
