--- a/docs/api-reference/CRMScript.Native.User.yml
+++ b/docs/api-reference/CRMScript.Native.User.yml
@@ -36,7 +36,7 @@ items:
   summary: "\nClass for representing a user.\n"
   remarks: 
   syntax: 
-    content: User."
+    content: User
   example: 
   - "\n<pre><code>User u;\n\nu.load(2); // Loads user with id = 2\nprint(u.getValue(&quot;username&quot;));\nu.setValue(&quot;email&quot;, &quot;bob@example.com&quot;);\nu.setValue(&quot;language&quot;, &quot;en&quot;); // &quot;no&quot; or &quot;en&quot;\nu.setValue(&quot;status&quot;, &quot;1&quot;); // 1 is Active, 2 is Not Present, 3 is deleted\nprint(u.isLoggedIn(2).toString()); // 2 = web pages, 1 = soap interface</code></pre>\n"
 - uid: CRMScript.Native.User.getValue(String)
@@ -56,10 +56,10 @@ items:
     parameters:
     - id: colName
       type: CRMScript.Global.String
-      description: String with column name."
+      description: "String with column name."
     return:
       type: CRMScript.Global.String
-      description: Returns a string with value in given column."
+      description: "Returns a string with value in given column."
   example: 
 - uid: CRMScript.Native.User.hasTicketAccess(Integer,Integer)
   commentId: M:CRMScript.Native.User.hasTicketAccess(Integer,Integer)
@@ -147,7 +147,7 @@ items:
       description: "The user Id."
     return:
       type: CRMScript.Global.Bool
-      description: true if the user is loaded successfully."
+      description: "True if the user is loaded successfully."
   example: 
 - uid: CRMScript.Native.User.loadFromAgentAndKey(Integer,String)
   commentId: M:CRMScript.Native.User.loadFromAgentAndKey(Integer,String)
@@ -166,13 +166,13 @@ items:
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: ID of the user"
+      description: "ID of the user"
     - id: Key
       type: CRMScript.Global.String
-      description: key of the agent."
+      description: "Key of the agent."
     return:
       type: CRMScript.Global.Bool
-      description: true if the user is loaded successfully."
+      description: "True if the user is loaded successfully."
   example: 
 - uid: CRMScript.Native.User.save()
   commentId: M:CRMScript.Native.User.save()
@@ -191,7 +191,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: returns the ID of the user."
+      description: "Returns the ID of the user."
   example: 
 - uid: CRMScript.Native.User.setValue(String,String,String)
   commentId: M:CRMScript.Native.User.setValue(String,String,String)
@@ -216,9 +216,9 @@ items:
       description: 
     - id: columns
       type: CRMScript.Global.String
-      description: String with column name."
+      description: "String with column name."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.User.toParser(Parser)
   commentId: M:CRMScript.Native.User.toParser(Parser)
@@ -237,7 +237,7 @@ items:
     parameters:
     - id: parser
       type: CRMScript.Native.Parser
-      description: Parser the user should be loaded to."
+      description: "Parser the user should be loaded to."
     return:
       type: CRMScript.Global.Void
       description:
