--- a/docs/api-reference/CRMScript.Native.WeekSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.WeekSchedule.yml
@@ -59,7 +59,7 @@ items:
   summary: "\nThis class is used to represent a week schedule - what hours a day are &quot;active&quot; for each day, etc.\n"
   remarks: 
   syntax: 
-    content: WeekSchedule."
+    content: WeekSchedule
   example: 
 - uid: CRMScript.Native.WeekSchedule.addTimeSpan(DateTime,TimeSpan)
   commentId: M:CRMScript.Native.WeekSchedule.addTimeSpan(DateTime,TimeSpan)
@@ -78,7 +78,7 @@ items:
     parameters:
     - id: start
       type: CRMScript.Global.DateTime
-      description: Start time for calculation"
+      description: "Start time for calculation"
     - id: add
       type: CRMScript.Native.TimeSpan
       description: "The time span to add (2 days, 1 hours, 5 minutes, 30 seconds...)."
@@ -103,10 +103,10 @@ items:
     parameters:
     - id: start
       type: CRMScript.Global.DateTime
-      description: Start time for calculation"
+      description: "Start time for calculation"
     - id: stop
       type: CRMScript.Global.DateTime
-      description: Stop time for calculation."
+      description: "Stop time for calculation."
     return:
       type: CRMScript.Native.TimeSpan
       description:
@@ -525,7 +525,7 @@ items:
       type: CRMScript.Global.String
       description: "A comma separated sting of dates that are not &quot;active&quot;."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.WeekSchedule.setSatStart(Time)
   commentId: M:CRMScript.Native.WeekSchedule.setSatStart(Time)
@@ -656,7 +656,7 @@ items:
       type: CRMScript.Global.Time
       description: "A time object set to desired stop time."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.WeekSchedule.setTueStart(Time)
   commentId: M:CRMScript.Native.WeekSchedule.setTueStart(Time)
@@ -743,7 +743,7 @@ items:
       type: CRMScript.Global.Time
       description: "A time object set to desired stop time."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.WeekSchedule
