--- a/docs/api-reference/CRMScript.Native.XMLNode.yml
+++ b/docs/api-reference/CRMScript.Native.XMLNode.yml
@@ -42,7 +42,7 @@ items:
     parameters:
     - id: value
       type: CRMScript.Native.XMLNode
-      description: XMLNode object."
+      description: "XMLNode object."
     return:
       type: CRMScript.Native.XMLNode
 - uid: CRMScript.Native.XMLNode.#ctor(String)
@@ -108,7 +108,7 @@ items:
       description: "The text with a given number of spaces."
     return:
       type: CRMScript.Global.String
-      description: XMLNodes converted to JSON."
+      description: "XMLNodes converted to JSON."
 - uid: CRMScript.Native.XMLNode.addChild(XMLNode)
   commentId: M:CRMScript.Native.XMLNode.addChild(XMLNode)
   id: addChild(XMLNode)
@@ -148,7 +148,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Native.XMLNode[]
-      description: Returns an array of the current node's children."
+      description: "Returns an array of the current node's children."
 - uid: CRMScript.Native.XMLNode.setChildren(XMLNode[])
   commentId: M:CRMScript.Native.XMLNode.setChildren(XMLNode[])
   id: setChildren(XMLNode[])
