--- a/docs/api-reference/CRMScript.Native.YearSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.YearSchedule.yml
@@ -29,7 +29,7 @@ items:
   summary: "\nThis class is used to represent a year schedule. A year can be composed of several WeekSchedules.\n"
   remarks: 
   syntax: 
-    content: YearSchedule."
+    content: YearSchedule
   example: 
 - uid: CRMScript.Native.YearSchedule.addTimeSpan(DateTime,TimeSpan)
   commentId: M:CRMScript.Native.YearSchedule.addTimeSpan(DateTime,TimeSpan)
@@ -41,14 +41,14 @@ items:
   nameWithType: YearSchedule.addTimeSpan(DateTime,TimeSpan)
   fullName: CRMScript.Native.YearSchedule.addTimeSpan(DateTime,TimeSpan)
   type: Method
-  summary: "\nThis function adds a timespan to the current year schedule.\n"
+  summary: "\nThis function adds a time span to the current year schedule.\n"
   remarks: 
   syntax: 
     content: DateTime addTimeSpan(DateTime dt, TimeSpan sp)
     parameters:
     - id: dt
       type: CRMScript.Global.DateTime
-      description: Start time for calculation"
+      description: "Start time for calculation"
     - id: sp
       type: CRMScript.Native.TimeSpan
       description: "The timespan to add (2 days, 1 hours, 5 minutes, 30 seconds...)."
@@ -101,10 +101,10 @@ items:
     parameters:
       - id: from
         type: CRMScript.Global.DateTime
-        description: Count from this date
+        description: "Count from this date."
       - id: to
         type: CRMScript.Global.DateTime
-        description: Count to this date."
+        description: "Count to this date."
     return:
       type: CRMScript.Native.TimeSpan
       description:
