--- a/docs/api-reference/CRMScript.Native.Customer.yml
+++ b/docs/api-reference/CRMScript.Native.Customer.yml
@@ -49,7 +49,7 @@ items:
   summary: "\nInitializes a new instance of the Customer class.\n"
   remarks: 
   syntax: 
-    content: Customer."
+    content: Customer
   example: 
   - "\n<pre><code>Customer c;\n\nc.load(2); // Loads customer with id = 2\nprint(c.getValue(&quot;email&quot;)); // Returns a list of all emails\nc.setValue(&quot;firstname&quot;, &quot;Bob&quot;);\nc.save();</code></pre>\n"
 - uid: CRMScript.Native.Customer.addEmail(String,Integer,Integer)
@@ -69,15 +69,15 @@ items:
     parameters:
     - id: email
       type: CRMScript.Global.String
-      description: Email address."
+      description: "Email address."
     - id: extTable
       type: CRMScript.Global.Integer
-      description: External owner of this email address as an extTable ID. extTable is a deprecated database integration called data sources."
+      description: "External owner of this email address as an extTable ID. extTable is a deprecated database integration called data sources."
     - id: dbiAgentId
       type: CRMScript.Global.Integer
-      description: External owner of this email address as a dbiAgent ID."
+      description: "External owner of this email address as a dbiAgent ID."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Customer.addEmail(String,Integer,Integer,Integer)
   commentId: M:CRMScript.Native.Customer.addEmail(String,Integer,Integer,Integer)
@@ -96,18 +96,18 @@ items:
     parameters:
     - id: email
       type: CRMScript.Global.String
-      description: Email address"
+      description: "Email address"
     - id: externalRank
       type: CRMScript.Global.Integer
-      description: External sorting rank. (Can't be changed in the Service GUI)."
+      description: "External sorting rank. (Can't be changed in the Service GUI)."
     - id: extTable
       type: CRMScript.Global.Integer
-      description: External owner of this email address as an extTable ID. extTable is a deprecated database integration called data sources."
+      description: "External owner of this email address as an extTable ID. extTable is a deprecated database integration called data sources."
     - id: dbiAgentId
       type: CRMScript.Global.Integer
-      description: External owner of this email address as a dbiAgent ID."
+      description: "External owner of this email address as a dbiAgent ID."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Customer.checkFieldRights(String,String)
   commentId: M:CRMScript.Native.Customer.checkFieldRights(String,String)
@@ -129,10 +129,10 @@ items:
       description: "The field to check."
     - id: fieldRight
       type: CRMScript.Global.String
-      description: Type of access to check for - read or write."
+      description: "Type of access to check for - read or write."
     return:
       type: CRMScript.Global.Bool
-      description: true if the current user has access to the field; otherwise, false."
+      description: "True if the current user has access to the field; otherwise, false."
   example: 
   - "\n<pre><code>Customer c;\n\nc.load(3);\nBool b = c.checkFieldRights(&quot;person&quot;,&quot;read&quot;);\nprint(b.toString());</code></pre>\n"
 - uid: CRMScript.Native.Customer.checkTableRights(String)
@@ -152,10 +152,10 @@ items:
     parameters:
     - id: tableRight
       type: CRMScript.Global.String
-      description: Type of access to check for - select, update, or insert."
+      description: "Type of access to check for - select, update, or insert."
     return:
       type: CRMScript.Global.Bool
-      description: true if the current user has access to the customer; otherwise, false."
+      description: "True if the current user has access to the customer; otherwise, false."
   example: 
   - "\n<pre><code>Customer c;\n\nc.load(3);\nBool b = c.checkTableRights(&quot;select&quot;);\nprint(b.toString());</code></pre>\n"
 - uid: CRMScript.Native.Customer.findExternallyFromEmail(String)
@@ -178,7 +178,7 @@ items:
       description: "The email address (&quot;alias@domain&quot;)."
     return:
       type: CRMScript.Global.Bool
-      description: true if an entry is found; otherwise, false."
+      description: "True if an entry is found; otherwise, false."
   example: 
 - uid: CRMScript.Native.Customer.findExternallyFromEmail(String,Integer)
   commentId: M:CRMScript.Native.Customer.findExternallyFromEmail(String,Integer)
@@ -200,10 +200,10 @@ items:
       description: "The email address (&quot;alias@domain&quot;)."
     - id: extTable
       type: CRMScript.Global.Integer
-      description: Used if you want to search only one data source."
+      description: "Used if you want to search only one data source."
     return:
       type: CRMScript.Global.Bool
-      description: true if an entry is found; otherwise, false."
+      description: "True if an entry is found; otherwise, false."
   example: 
 - uid: CRMScript.Native.Customer.findExternallyFromKey(Integer,String)
   commentId: M:CRMScript.Native.Customer.findExternallyFromKey(Integer,String)
@@ -228,7 +228,7 @@ items:
       description: "The primary key in the external table defining the entry."
     return:
       type: CRMScript.Global.Integer
-      description: true if found; otherwise, false."
+      description: "True if found; otherwise, false."
   example: 
 - uid: CRMScript.Native.Customer.findFromAgentAndKey(Integer,String)
   commentId: M:CRMScript.Native.Customer.findFromAgentAndKey(Integer,String)
@@ -275,7 +275,7 @@ items:
       description: "The cellphone to lookup."
     return:
       type: CRMScript.Global.Bool
-      description: true if found; otherwise, false."
+      description: "True if found; otherwise, false."
   example: 
 - uid: CRMScript.Native.Customer.findFromEmail(String)
   commentId: M:CRMScript.Native.Customer.findFromEmail(String)
@@ -297,7 +297,7 @@ items:
       description: "The address to look up. Must be address alone (alias@domain)."
     return:
       type: CRMScript.Global.Bool
-      description: true if found; otherwise, false."
+      description: "True if found; otherwise, false."
   example: 
 - uid: CRMScript.Native.Customer.getValue(String)
   commentId: M:CRMScript.Native.Customer.getValue(String)
@@ -342,7 +342,7 @@ items:
       description: "The ID of the customer to load."
     return:
       type: CRMScript.Global.Bool
-      description: true if the customer exists; otherwise, false."
+      description: "True if the customer exists; otherwise, false."
   example: 
   - "\n<pre><code>Customer c;\n\nprint(c.load(3));</code></pre>\n"
 - uid: CRMScript.Native.Customer.loadFromAgentAndKey(Integer,String)
@@ -368,7 +368,7 @@ items:
       description: "The external key of this customer."
     return:
       type: CRMScript.Global.Bool
-      description: true if operation was successful; false if the customer does not exist."
+      description: "True if operation was successful; false if the customer does not exist."
   example: 
 - uid: CRMScript.Native.Customer.login()
   commentId: M:CRMScript.Native.Customer.login()
@@ -386,7 +386,7 @@ items:
     content: Void login()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Customer.logout()
   commentId: M:CRMScript.Native.Customer.logout()
@@ -404,7 +404,7 @@ items:
     content: Void logout()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Customer.makeSalutation()
   commentId: M:CRMScript.Native.Customer.makeSalutation()
@@ -445,7 +445,7 @@ items:
       type: CRMScript.Global.String
       description: "The email address you want to remove from the customer."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Customer.removeExternalEmails(Integer,Integer)
   commentId: M:CRMScript.Native.Customer.removeExternalEmails(Integer,Integer)
@@ -469,7 +469,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Customer.save()
   commentId: M:CRMScript.Native.Customer.save()
@@ -534,7 +534,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>Customer c;\n\nc.load(3);\nBool b = c.checkTableRights(&quot;select&quot;);\nprint(b.toString());\n\nc.setValue(&quot;name&quot;, &quot;Test&quot;);\nprint(c.getValue(&quot;name&quot;));</code></pre>\n"
 - uid: CRMScript.Native.Customer.toParser(Parser)
@@ -556,7 +556,7 @@ items:
       type: CRMScript.Native.Parser
       description: "The parser to set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.Customer
