--- a/docs/api-reference/CRMScript.Native.ExtraTable.yml
+++ b/docs/api-reference/CRMScript.Native.ExtraTable.yml
@@ -35,7 +35,7 @@ items:
   summary: "\nInitializes a new instance of the ExtraTable class.\n"
   remarks: 
   syntax: 
-    content: ExtraTable."
+    content: ExtraTable
   example: 
   - "\n<pre><code>ExtraTable e;\n\ne.load(2); // Loads ExtraTable with ID = 2\ne.setValue(&quot;fieldname&quot;, &quot;Test&quot;);\ne.setValue(&quot;value&quot;, &quot;43&quot;);\nprint(e.getValue(&quot;Test&quot;));</code></pre>\n"
 - uid: CRMScript.Native.ExtraTable.delete()
@@ -54,7 +54,7 @@ items:
     content: Void delete()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.ExtraTable.getValue(String)
   commentId: M:CRMScript.Native.ExtraTable.getValue(String)
@@ -115,10 +115,10 @@ items:
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: Table ID."
+      description: "Table ID."
     return:
       type: CRMScript.Global.Bool
-      description: true if the entry was found and loaded; otherwise, false."
+      description: "True if the entry was found and loaded; otherwise, false."
   example: 
   - "\n<pre><code>ExtraTable ex;\n\nBool b = ex.load(2);\nprint(b.toString());</code></pre>\n"
 - uid: CRMScript.Native.ExtraTable.loadFromAgentAndKey(Integer,String)
@@ -138,13 +138,13 @@ items:
     parameters:
     - id: agent
       type: CRMScript.Global.Integer
-      description: ID of the agent, registered in the Settings/DBI section of Service."
+      description: "ID of the agent, registered in the Settings/DBI section of Service."
     - id: key
       type: CRMScript.Global.String
-      description: ID of this entry in the external system."
+      description: "ID of this entry in the external system."
     return:
       type: CRMScript.Global.Bool
-      description: true if the entry was found and loaded; otherwise, false."
+      description: "True if the entry was found and loaded; otherwise, false."
   example: 
 - uid: CRMScript.Native.ExtraTable.save()
   commentId: M:CRMScript.Native.ExtraTable.save()
@@ -182,7 +182,7 @@ items:
     parameters:
     - id: reload
       type: CRMScript.Global.Bool
-      description: true signals that the entry should be reloaded after the save."
+      description: "True signals that the entry should be reloaded after the save."
     return:
       type: CRMScript.Global.Integer
       description: "The ID of the newly saved object."
@@ -204,12 +204,12 @@ items:
     parameters:
     - id: field
       type: CRMScript.Global.String
-      description: Name of field to set."
+      description: "Name of field to set."
     - id: value
       type: CRMScript.Global.String
       description: "A string representation of the value to be assigned to the field."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>ExtraTable ex;\n\nBool b = ex.load(2);\nprint(b.toString());\n\nex.setValue(&quot;name&quot;, &quot;Test&quot;);\nprint(ex.getValue(&quot;x_table&quot;));</code></pre>\n"
 references:
