--- a/docs/api-reference/CRMScript.Native.FHBitSet.yml
+++ b/docs/api-reference/CRMScript.Native.FHBitSet.yml
@@ -33,7 +33,7 @@ items:
   summary: "\nInitializes a new instance of the FHBitSet class.\n"
   remarks: 
   syntax: 
-    content: FHBitSet."
+    content: FHBitSet
   example: 
   - "\n<pre><code>FHBitSet fh;\n\nfh.set(43);\nfh.setBitNo(15, true);\nprintLine(fh.toLsbString()); // Prints &quot;00000000000000001000000000101011&quot;</code></pre>\n"
 - uid: CRMScript.Native.FHBitSet.getBitNo(Integer)
@@ -53,10 +53,10 @@ items:
     parameters:
     - id: number
       type: CRMScript.Global.Integer
-      description: Bit number to check (0-31)."
+      description: "Bit number to check (0-31)."
     return:
       type: CRMScript.Global.Bool
-      description: true if a specified bit is set; otherwise, false."
+      description: "True if a specified bit is set; otherwise, false."
   example: 
 - uid: CRMScript.Native.FHBitSet.set(Integer)
   commentId: M:CRMScript.Native.FHBitSet.set(Integer)
@@ -75,9 +75,9 @@ items:
     parameters:
     - id: value
       type: CRMScript.Global.Integer
-      description: Used to initialize the bitset."
+      description: "Used to initialize the bitset."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>FHBitSet fh;\n\nfh.set(44);\nprint(fh.toLsbString());</code></pre>\n"
 - uid: CRMScript.Native.FHBitSet.set(String)
@@ -97,9 +97,9 @@ items:
     parameters:
     - id: rep
       type: CRMScript.Global.String
-      description: Used to initialize the bitset. For example, &quot;1234&quot;
+      description: "Used to initialize the bitset. For example, &quot;1234&quot;"
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.FHBitSet.setBitNo(Integer,Bool)
   commentId: M:CRMScript.Native.FHBitSet.setBitNo(Integer,Bool)
@@ -118,12 +118,12 @@ items:
     parameters:
     - id: number
       type: CRMScript.Global.Integer
-      description: Index of the bit to set"
+      description: "Index of the bit to set"
     - id: val
       type: CRMScript.Global.Bool
-      description: Value to set this bit to - (True/False - 1/0)."
+      description: "Value to set this bit to - (True/False - 1/0)."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>FHBitSet fh;\n\nBool b = true;\nfh.set(0);\nfh.setBitNo(15, b);\nprint(fh.toLsbString());</code></pre><strong>Output:</strong> 00000000000000001000000000000000\n"
 - uid: CRMScript.Native.FHBitSet.toInteger()
