--- a/docs/api-reference/CRMScript.Native.LocalizedField.yml
+++ b/docs/api-reference/CRMScript.Native.LocalizedField.yml
@@ -36,8 +36,8 @@ items:
   summary: "\nInitializes a new instance of the Knowledge class.\n"
   remarks: 
   syntax: 
-    content: LocalizedField."
-  example: 
+    content: LocalizedField
+  example:
   - "\n<pre><code>Company c;\nc.load(someId);\nLocalizedField[][] adr = c.getFormattedAddress();\nadr[0][0].setValue(adr[0][0].getValue() + &quot;A&quot;); // Add an 'A' to the first address field\nc.setFormattedAddress(adr);\nc.save();\n\n// Print all info about all the address fields\nfor (Integer i = 0; i &lt; adr.length(); i++)\n{\n  for (Integer j = 0; j &lt; adr[i].length(); j++)\n    print(adr[i][j].getLabel() + &quot;:&quot; + adr[i][j].getName() + &quot;:&quot; + adr[i][j].getValue() + &quot;:&quot; + adr[i][j].getTooltip() + &quot;:&quot; + adr[i][j].getValueLength().toString() + &quot;:&quot; + adr[i][j].getAddressType() +  &quot;     &quot;);\n\n  print(&quot;\n&quot;);\n}</code></pre>\n"
 - uid: CRMScript.Native.LocalizedField.getAddressType()
   commentId: M:CRMScript.Native.LocalizedField.getAddressType()
@@ -172,7 +172,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.LocalizedField.setTooltip(String)
   commentId: M:CRMScript.Native.LocalizedField.setTooltip(String)
@@ -193,7 +193,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.LocalizedField.setValue(String)
   commentId: M:CRMScript.Native.LocalizedField.setValue(String)
@@ -214,7 +214,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.LocalizedField
