--- a/docs/api-reference/CRMScript.Native.SearchEngine.yml
+++ b/docs/api-reference/CRMScript.Native.SearchEngine.yml
@@ -73,7 +73,7 @@ items:
   summary: "\nInitializes a new instance of the SearchEngine class.\n"
   remarks: 
   syntax: 
-    content: SearchEngine."
+    content: SearchEngine
   example: 
 - uid: CRMScript.Native.SearchEngine.addComparison(String,String,String,String,Integer)
   commentId: M:CRMScript.Native.SearchEngine.addComparison(String,String,String,String,Integer)
@@ -95,18 +95,18 @@ items:
       description: "The field to compare to field2"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator"
+      description: "Comparison operator"
     - id: field2
       type: CRMScript.Global.String
       description: 
     - id: rowOperator
       type: CRMScript.Global.String
-      description: Operator for combining this and the next criterion"
+      description: "Operator for combining this and the next criterion"
     - id: priority
       type: CRMScript.Global.Integer
       description: "A number. All criteria with the same number will be placed inside the same brackets."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addComparison(String,String,String,String,String,String,Integer)
   commentId: M:CRMScript.Native.SearchEngine.addComparison(String,String,String,String,String,String,Integer)
@@ -128,24 +128,24 @@ items:
       description: "The field to compare to field2"
     - id: func1
       type: CRMScript.Global.String
-      description: Optional. The function to use on field1"
+      description: "Optional. The function to use on field1"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator"
+      description: "Comparison operator"
     - id: field2
       type: CRMScript.Global.String
       description: 
     - id: func2
       type: CRMScript.Global.String
-      description: Optional. The function to use on field2"
+      description: "Optional. The function to use on field2"
     - id: rowOperator
       type: CRMScript.Global.String
-      description: Operator for combining this and the next criterion"
+      description: "Operator for combining this and the next criterion"
     - id: priority
       type: CRMScript.Global.Integer
       description: "A number. All criteria with the same number will be placed inside the same brackets."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addCriteria(String,String,String)
   commentId: M:CRMScript.Native.SearchEngine.addCriteria(String,String,String)
@@ -167,7 +167,7 @@ items:
       description: "The field to restrict"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator"
+      description: "Comparison operator"
     - id: value
       type: CRMScript.Global.String
       description: 
@@ -193,13 +193,13 @@ items:
       description: "The field to restrict"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator"
+      description: "Comparison operator"
     - id: value
       type: CRMScript.Global.String
       description: 
     - id: rowOperator
       type: CRMScript.Global.String
-      description: Operator for combining this and the next criterion"
+      description: "Operator for combining this and the next criterion"
     - id: priority
       type: CRMScript.Global.Integer
       description: "A number. All criteria with the same number will be placed inside the same brackets."
@@ -228,18 +228,18 @@ items:
       description: "The function to use on field"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator"
+      description: "Comparison operator"
     - id: value
       type: CRMScript.Global.String
       description: 
     - id: rowOperator
       type: CRMScript.Global.String
-      description: Operator for combining this and the next criterion"
+      description: "Operator for combining this and the next criterion"
     - id: priority
       type: CRMScript.Global.Integer
       description: "A number. All criteria with the same number will be placed inside the same brackets."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addData(String,String)
   commentId: M:CRMScript.Native.SearchEngine.addData(String,String)
@@ -263,7 +263,7 @@ items:
       type: CRMScript.Global.String
       description: "The value to set on the field."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addDataField(String,String)
   commentId: M:CRMScript.Native.SearchEngine.addDataField(String,String)
@@ -282,12 +282,12 @@ items:
     parameters:
     - id: field1
       type: CRMScript.Global.String
-      description: Field to assign to."
+      description: "Field to assign to."
     - id: field2
       type: CRMScript.Global.String
-      description: Field where the value is found."
+      description: "Field where the value is found."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>se.addDataField(&quot;customer.phone&quot;, &quot;customer.cellphone&quot;);</code></pre>\n"
 - uid: CRMScript.Native.SearchEngine.addDataField(String,String,String)
@@ -307,15 +307,15 @@ items:
     parameters:
     - id: field1
       type: CRMScript.Global.String
-      description: Field to assign to."
+      description: "Field to assign to."
     - id: field2
       type: CRMScript.Global.String
-      description: Field where the value is found."
+      description: "Field where the value is found."
     - id: function
       type: CRMScript.Global.String
       description: "Aggregate function to use for field2."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addField(String)
   commentId: M:CRMScript.Native.SearchEngine.addField(String)
@@ -336,7 +336,7 @@ items:
       type: CRMScript.Global.String
       description: "The field to select."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addField(String,String)
   commentId: M:CRMScript.Native.SearchEngine.addField(String,String)
@@ -360,7 +360,7 @@ items:
       type: CRMScript.Global.String
       description: "A function to use on the field."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addFields(String,String)
   commentId: M:CRMScript.Native.SearchEngine.addFields(String,String)
@@ -384,7 +384,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>addFields(&quot;ticket&quot;, &quot;id,title,category.fullname,cust_id.fullName&quot;);</code></pre>\n"
 - uid: CRMScript.Native.SearchEngine.addHaving(String,String,String,String,Integer)
@@ -407,18 +407,18 @@ items:
       description: "The field to restrict"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator"
+      description: "Comparison operator"
     - id: value
       type: CRMScript.Global.String
       description: 
     - id: rowOperator
       type: CRMScript.Global.String
-      description: Operator for combining this and the next criterion"
+      description: "Operator for combining this and the next criterion"
     - id: priority
       type: CRMScript.Global.Integer
       description: "A number. All criteria with the same number will be placed inside the same brackets."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addHaving(String,String,String,String,String,Integer)
   commentId: M:CRMScript.Native.SearchEngine.addHaving(String,String,String,String,String,Integer)
@@ -443,18 +443,18 @@ items:
       description: "The function to use on field"
     - id: compOperator
       type: CRMScript.Global.String
-      description: Comparison operator"
+      description: "Comparison operator"
     - id: value
       type: CRMScript.Global.String
       description: 
     - id: rowOperator
       type: CRMScript.Global.String
-      description: Operator for combining this and the next criterion"
+      description: "Operator for combining this and the next criterion"
     - id: priority
       type: CRMScript.Global.Integer
       description: "A number. All criteria with the same number will be placed inside the same brackets."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addJoinCriteria(String,String,String,String,Integer)
   commentId: M:CRMScript.Native.SearchEngine.addJoinCriteria(String,String,String,String,Integer)
@@ -487,7 +487,7 @@ items:
       type: CRMScript.Global.Integer
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addOrder(String,Bool)
   commentId: M:CRMScript.Native.SearchEngine.addOrder(String,Bool)
@@ -511,7 +511,7 @@ items:
       type: CRMScript.Global.Bool
       description: "The sort order. True = ascending, false = descending."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.addOrder(String,String,Bool)
   commentId: M:CRMScript.Native.SearchEngine.addOrder(String,String,Bool)
@@ -538,7 +538,7 @@ items:
       type: CRMScript.Global.Bool
       description: "The sort order. True = ascending, false = descending."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.buildSql()
   commentId: M:CRMScript.Native.SearchEngine.buildSql()
@@ -576,7 +576,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.String
-      description: Determines the type of query to build."
+      description: "Determines the type of query to build."
     return:
       type: CRMScript.Global.String
       descending: the SQL query generated by the SearchEngine."
@@ -600,7 +600,7 @@ items:
       type: CRMScript.Global.Bool
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.countColumns()
   commentId: M:CRMScript.Native.SearchEngine.countColumns()
@@ -656,7 +656,7 @@ items:
     content: Void delete()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.eof()
   commentId: M:CRMScript.Native.SearchEngine.eof()
@@ -675,7 +675,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the end of the result set is reached; otherwise, false."
+      description: "True if the end of the result set is reached; otherwise, false."
   example: 
 - uid: CRMScript.Native.SearchEngine.execute()
   commentId: M:CRMScript.Native.SearchEngine.execute()
@@ -816,7 +816,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>SearchEngine se;\nse.addFields(&quot;sale&quot;, &quot;sale_id,heading,amount&quot;);\nse.setLimit(10);\nJSONBuilder jb;\njb.setPrettyPrint(4);\njb.pushObject(&quot;&quot;);\njb.addString(&quot;foo&quot;, &quot;bar&quot;);\nse.executeToJSONBuilder(jb, &quot;id:Integer,heading:String,amount:Float&quot;, &quot;sales&quot;);\njb.popLevel();\nprintLine(jb.getString());</code></pre>\n"
 - uid: CRMScript.Native.SearchEngine.findAlternativeFields(String)
@@ -836,7 +836,7 @@ items:
     parameters:
     - id: fieldBeginsWith
       type: CRMScript.Global.String
-      description: Fields that begins with..."
+      description: "Fields that begins with..."
     return:
       type: CRMScript.Global.String[]
       description:
@@ -883,7 +883,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: false if the result set is empty, otherwise, true."
+      description: "False if the result set is empty, otherwise, true."
   example: 
 - uid: CRMScript.Native.SearchEngine.getField(Integer)
   commentId: M:CRMScript.Native.SearchEngine.getField(Integer)
@@ -1009,7 +1009,7 @@ items:
     parameters: []
     return:
      type: CRMScript.Global.Bool
-     description: false if the end of result set is reached; otherwise, true."
+     description: "False if the end of result set is reached; otherwise, true."
   example: 
 - uid: CRMScript.Native.SearchEngine.select()
   commentId: M:CRMScript.Native.SearchEngine.select()
@@ -1047,9 +1047,9 @@ items:
     parameters:
     - id: functionName
       type: CRMScript.Global.String
-      description: Name of ejscript function."
+      description: "Name of ejscript function."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.setDBDistinct(Bool)
   commentId: M:CRMScript.Native.SearchEngine.setDBDistinct(Bool)
@@ -1070,7 +1070,7 @@ items:
       type: CRMScript.Global.Bool
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.setDistinct(String)
   commentId: M:CRMScript.Native.SearchEngine.setDistinct(String)
@@ -1091,7 +1091,7 @@ items:
       type: CRMScript.Global.String
       description: 
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
   - "se.setDistinct(&quot;ticked.id&quot;); There will only be one entry with the same ticket ID, very useful with many to many relations."
 - uid: CRMScript.Native.SearchEngine.setGroup(Bool)
@@ -1111,9 +1111,9 @@ items:
     parameters:
     - id: set
       type: CRMScript.Global.Bool
-      description: true if you want to set the groupby-clause, false to remove a groupBy-clause."
+      description: "True if you want to set the groupby-clause, false to remove a groupBy-clause."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.setLimit(Integer)
   commentId: M:CRMScript.Native.SearchEngine.setLimit(Integer)
@@ -1134,7 +1134,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The limit of the rows to receive in the result set."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SearchEngine.update()
   commentId: M:CRMScript.Native.SearchEngine.update()
@@ -1152,7 +1152,7 @@ items:
     content: Void update()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.SearchEngine
