--- a/docs/api-reference/CRMScript.Native.SpmCustomerList.yml
+++ b/docs/api-reference/CRMScript.Native.SpmCustomerList.yml
@@ -33,7 +33,7 @@ items:
   summary: "\nInitializes a new instance of the SpmCustomerList class.\n"
   remarks: 
   syntax: 
-    content: SpmCustomerList."
+    content: SpmCustomerList
   example: 
 - uid: CRMScript.Native.SpmCustomerList.addRecipient(Integer)
   commentId: M:CRMScript.Native.SpmCustomerList.addRecipient(Integer)
@@ -54,7 +54,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of the customer to add."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmCustomerList.delete()
   commentId: M:CRMScript.Native.SpmCustomerList.delete()
@@ -73,7 +73,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the list was deleted; false if the list does not exist or it currently is in use."
+      description: "True if the list was deleted; false if the list does not exist or it currently is in use."
   example: 
 - uid: CRMScript.Native.SpmCustomerList.load(Integer)
   commentId: M:CRMScript.Native.SpmCustomerList.load(Integer)
@@ -92,10 +92,10 @@ items:
     parameters:
     - id: id
       type: CRMScript.Global.Integer
-      description: ID of the list to load."
+      description: "ID of the list to load."
     return:
       type: CRMScript.Global.Bool
-      description: true if successful; otherwise, false."
+      description: "True if successful; otherwise, false."
   example: 
 - uid: CRMScript.Native.SpmCustomerList.removeRecipients()
   commentId: M:CRMScript.Native.SpmCustomerList.removeRecipients()
@@ -113,7 +113,7 @@ items:
     content: Void removeRecipients()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.SpmCustomerList.save()
   commentId: M:CRMScript.Native.SpmCustomerList.save()
@@ -132,7 +132,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: ID of the list; -1 if the list could not be saved."
+      description: "ID of the list; -1 if the list could not be saved."
   example: 
 - uid: CRMScript.Native.SpmCustomerList.setFolderId(Integer)
   commentId: M:CRMScript.Native.SpmCustomerList.setFolderId(Integer)
@@ -151,7 +151,7 @@ items:
     parameters:
     - id: folderId
       type: CRMScript.Global.Integer
-      description: ID of the folder where you want the list."
+      description: "ID of the folder where you want the list."
     return:
       type: CRMScript.Global.Void 
   example: 
@@ -174,7 +174,7 @@ items:
       type: CRMScript.Global.String
       description: "The name of the list."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.Native.SpmCustomerList
