--- a/docs/api-reference/CRMScript.Native.StatResult.yml
+++ b/docs/api-reference/CRMScript.Native.StatResult.yml
@@ -35,7 +35,7 @@ items:
   summary: "\nInitializes a new instance of the StatResult class.\n"
   remarks: 
   syntax: 
-    content: StatResult."
+    content: StatResult
   example: 
 - uid: CRMScript.Native.StatResult.atGroupBegin(Integer)
   commentId: M:CRMScript.Native.StatResult.atGroupBegin(Integer)
@@ -57,7 +57,7 @@ items:
       description: "The column which identifies the group."
     return:
       type: CRMScript.Global.Bool
-      description: True if we're at the first row for this group; otherwise, false."
+      description: "True if we're at the first row for this group; otherwise, false."
   example: 
 - uid: CRMScript.Native.StatResult.atGroupEnd(Integer)
   commentId: M:CRMScript.Native.StatResult.atGroupEnd(Integer)
@@ -79,7 +79,7 @@ items:
       description: "The column which identifies the group."
     return:
       type: CRMScript.Global.Bool
-      description: True if we're at the last row for this group; otherwise, false."
+      description: "True if we're at the last row for this group; otherwise, false."
   example: 
 - uid: CRMScript.Native.StatResult.dumpParser()
   commentId: M:CRMScript.Native.StatResult.dumpParser()
@@ -117,7 +117,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if the internal iterator is past the last element; otherwise, false."
+      description: "True if the internal iterator is past the last element; otherwise, false."
   example: 
 - uid: CRMScript.Native.StatResult.getField(Integer)
   commentId: M:CRMScript.Native.StatResult.getField(Integer)
@@ -180,7 +180,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: eof() after move."
+      description: "Eof() after move."
   example: 
 - uid: CRMScript.Native.StatResult.rewind()
   commentId: M:CRMScript.Native.StatResult.rewind()
@@ -198,7 +198,7 @@ items:
     content: Void rewind()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.StatResult.saveAsResult(Integer,Integer,Integer)
   commentId: M:CRMScript.Native.StatResult.saveAsResult(Integer,Integer,Integer)
@@ -217,13 +217,13 @@ items:
     parameters:
     - id: column
       type: CRMScript.Global.Integer
-      description: What column to use as ID field"
+      description: "What column to use as ID field"
     - id: ownerId
       type: CRMScript.Global.Integer
-      description: ID of the owner of the result set (so it can be deleted at logout time)"
+      description: "ID of the owner of the result set (so it can be deleted at logout time)"
     - id: maxRows
       type: CRMScript.Global.Integer
-      description: Maximum number wanted in the result set."
+      description: "Maximum number wanted in the result set."
     return:
       type: CRMScript.Global.Integer
       description: "A reference to the result set."
