--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -49,7 +49,7 @@ items:
   summary: "\nClass for representing an SuperOffice Service Ticket.\n"
   remarks: 
   syntax: 
-    content: Ticket."
+    content: Ticket
   example: 
   - "\n<pre><code>Ticket t;\n\nt.load(2); // Loads the ticket with id = 2\nprint(t.getValue(&quot;ticketStatus&quot;));\nt.setValue(&quot;title&quot;, &quot;Test&quot;);\nt.setValue(&quot;status&quot;, &quot;1&quot;);\nDateTime d; // Default value for DateTime is now\nt.setValue(&quot;dbiLastModified&quot;, d.toString());\nprint(t.getOwnerEmail()); // Prints name and email of owner</code></pre>\n"
 - uid: CRMScript.Native.Ticket.addSecondaryCustomers(Vector)
@@ -71,7 +71,7 @@ items:
       type: CRMScript.Native.Vector
       description: "An array of Strings containing the customerIds to add as secondary customers on the ticket."
     return: 
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Ticket.buildEmailSubject()
   commentId: M:CRMScript.Native.Ticket.buildEmailSubject()
@@ -111,7 +111,7 @@ items:
       type: CRMScript.Global.Integer
       description: "As an Integer."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Ticket.delegate()
   commentId: M:CRMScript.Native.Ticket.delegate()
@@ -129,7 +129,7 @@ items:
     content: delegate()
     parameters: []
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Ticket.delegate(Integer)
   commentId: M:CRMScript.Native.Ticket.delegate(Integer)
@@ -150,7 +150,7 @@ items:
       type: CRMScript.Global.Integer
       description: "The ID of a user you do not want to delegate to."
     return:
-      type: CRMScript.Global.Void."
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Ticket.getInvolvedOnly()
   commentId: M:CRMScript.Native.Ticket.getInvolvedOnly()
@@ -248,7 +248,7 @@ items:
       description: "The name of the wanted column."
     return:
       type: CRMScript.Global.String
-      description: Returns a string representation of the wanted value."
+      description: "Returns a string representation of the wanted value."
   example: 
 - uid: CRMScript.Native.Ticket.load(Integer)
   commentId: M:CRMScript.Native.Ticket.load(Integer)
@@ -399,10 +399,10 @@ items:
     parameters:
     - id: setReadStatus
       type: CRMScript.Global.Bool
-      description: Whether to calculate and set the read status on save. True = yes"
+      description: "Whether to calculate and set the read status on save. True = yes"
     - id: doNotCheckEscalating
       type: CRMScript.Global.Bool
-      description: True if you do NOT want the changes done on the ticket to result in a possible escalation, otherwise false."
+      description: "True if you do NOT want the changes done on the ticket to result in a possible escalation, otherwise false."
     return:
       type: CRMScript.Global.Integer
       description: "The ID of the saved ticket."
@@ -427,10 +427,10 @@ items:
       description: "A String that will be saved in the log of the ticket"
     - id: setReadStatus
       type: CRMScript.Global.Bool
-      description: Whether to calculate and set the read status on save. True = yes"
+      description: "Whether to calculate and set the read status on save. True = yes"
     - id: doNotCheckEscalating
       type: CRMScript.Global.Bool
-      description: True if you do NOT want the changes done on the ticket to result in a possible escalation, otherwise false."
+      description: "True if you do NOT want the changes done on the ticket to result in a possible escalation, otherwise false."
     return:
       type: CRMScript.Global.Integer
       description: "The ID of the saved ticket."
@@ -455,16 +455,16 @@ items:
       description: "The mail subject, maybe ticket.title."
     - id: recipients
       type: CRMScript.Native.StringMatrix
-      description: String matrix with recipients"
+      description: "String matrix with recipients"
     - id: fromCust
       type: CRMScript.Global.Bool
-      description: Email address from ticket or customer"
+      description: "Email address from ticket or customer"
     - id: messages
       type: CRMScript.Global.String
-      description: Comma-separated list of message id's to forward"
+      description: "Comma-separated list of message IDs to forward"
     - id: msgId
       type: CRMScript.Global.Integer
-      description: ID of added "forward" message or "-1"
+      description: "ID of added 'forward' message or -1"
     - id: comment
       type: CRMScript.Global.String
       description: "A comment that will be above the forwarded messages."
