--- a/docs/api-reference/CRMScript.Native.Timer.yml
+++ b/docs/api-reference/CRMScript.Native.Timer.yml
@@ -32,7 +32,7 @@ items:
   summary: "\nInitializes a new instance of the Timer class.\n"
   remarks: 
   syntax: 
-    content: Timer."
+    content: Timer
   example: 
   - "\n<pre><code>Timer timer;\ntimer.start();\n\n// code you want to time\n\ntimer.stop();\nFloat timeTaken = timer.getSeconds();</code></pre>\n"
 - uid: CRMScript.Native.Timer.getHiResTimer()
